--- a/texts/zh_CN.properties
+++ b/texts/zh_CN.properties
@@ -12,7 +12,7 @@ geyser.auth.login.form.disconnect=需要登录
 geyser.auth.login.form.expired=登录已过期
 geyser.auth.login.form.notice.btn_disconnect=断开连接
 geyser.auth.login.form.notice.btn_login.microsoft=使用微软账户登录（不支持）
-geyser.auth.login.form.notice.btn_login.mojang=使用 MoeWorld Skin 账户登录
+geyser.auth.login.form.notice.btn_login.mojang=使用 MoeWorld Skin 账户登录 \n skin.moeworld.top
 geyser.auth.login.form.notice.desc=您需要一个MoeWorld Skin帐户才能在此服务器上游玩.
 geyser.auth.login.form.notice.title=登录
 geyser.auth.login.invalid.kick=无效/不正确的登录信息
