--- a/texts/zh_CN.properties
+++ b/texts/zh_CN.properties
@@ -104,7 +104,7 @@ geyser.core.fail=Geyser启动失败 {0}\:{1}
 geyser.core.finish.done=完成 ({0}s)\!
 geyser.core.finish.console=执行/geyser help 来获取帮助信息\!
 geyser.core.finish.gui=运行命令 -> help 以获取帮助\!
-geyser.core.load=加载 {0} 中, 版本 {1}
+geyser.core.load=加载 Ver.空梦 {0} 中, 版本 {1}
 geyser.core.movement_warn=Geyser 无法完美翻译基岩版的玩家移动！在有反作弊的服务器里使用 Geyser 可能导致你被封禁。
 geyser.core.shutdown.done=Geyser成功关闭.
 geyser.core.shutdown.kick.done=踢出所有玩家\!
