--- a/texts/ja_JP.properties
+++ b/texts/ja_JP.properties
@@ -4,20 +4,20 @@ geyser.advancements.parentid=サーバーの進捗\: {0}
 geyser.auth.already_loggedin={0} はすでにログインしています！
 geyser.auth.floodgate.bad_key=Floodgate キーファイルの読み取り中にエラーが発生しました
 geyser.auth.floodgate.encrypt_fail=メッセージの暗号化に失敗しました
-geyser.auth.login.form.details.desc=以下に Minecraft\: Java Edition アカウントの認証情報を入力してください。
+geyser.auth.login.form.details.desc=以下にMoeWorld Skinのユーザー名とパスワードを入力してください
 geyser.auth.login.form.details.email=メールアドレス/ユーザー名
 geyser.auth.login.form.details.pass=パスワード
 geyser.auth.login.form.details.title=ログイン詳細
 geyser.auth.login.form.disconnect=ログインが必要です
 geyser.auth.login.form.expired=ログイン期限が切れました
 geyser.auth.login.form.notice.btn_disconnect=切断
-geyser.auth.login.form.notice.btn_login.microsoft=Microsoftアカウントでログイン
-geyser.auth.login.form.notice.btn_login.mojang=Mojangアカウントでログイン
-geyser.auth.login.form.notice.desc=このサーバーでプレイするには、Java Edition アカウントが必要です。
+geyser.auth.login.form.notice.btn_login.microsoft=Microsoftアカウントでログイン（サポートされていません）
+geyser.auth.login.form.notice.btn_login.mojang=MoeWorld Skin アカウントでログイン \n skin.moeworld.top
+geyser.auth.login.form.notice.desc=このサーバーでプレイするにはMoeWorld Skinアカウントが必要です。
 geyser.auth.login.form.notice.title=ログイン
 geyser.auth.login.invalid.kick=無効/不正なログイン情報
 geyser.auth.login.invalid=ユーザー\: {0} が無効なログイン情報を入力したので、キックしました。
-geyser.auth.login.save_token.expired=あなたの Java Edition の認証情報は有効期限が切れているか、無効です。Microsoft で再認証する必要があります。認証情報は再度保存されます。
+geyser.auth.login.save_token.expired=あなたのMoeWorld Skinログインクレデンシャルは期限切れまたは無効になりました。MoeWorld Skinアカウントで再認証する必要があります。その後、あなたのクレデンシャルは再保存されます。
 geyser.auth.login.save_token.warning=&c注意\:&r あなたの Java Edition のアカウント情報は、このGeyserインスタンスに保存されています。これは、このGeyserインスタンスにアクセスできる人が、あなたの許可なしにあなたのアカウントを使用できることを意味します。
 geyser.auth.login.save_token.proceed=あなたがこのGeyserインスタンスの所有者であるか、またはGeyserインスタンスの所有者をあなたが信頼している場合にのみ、続行してください。
 geyser.auth.login.timeout=切断後このサーバーに再参加するには、{0}秒待つ必要があります。
@@ -104,7 +104,7 @@ geyser.core.fail={0} で Geyser を開始できませんでした\: {1}
 geyser.core.finish.done=完了 ({0}s)！
 geyser.core.finish.console=/geyser help を実行してください！
 geyser.core.finish.gui=コマンドの実行 -> help！
-geyser.core.load={0} バージョン {1} を読み込んでいます
+geyser.core.load=Ver.空梦 {0} バージョン {1} を読み込んでいます
 geyser.core.movement_warn=Geyser は、Bedrock の動きを完全には変換しません。 アンチチートを導入したサーバーで Geyser を使用すると、バンされる可能性があります。
 geyser.core.shutdown.done=Geyser は正常にシャットダウンしました。
 geyser.core.shutdown.kick.done=すべてのプレイヤーをキックしました！
@@ -178,13 +178,13 @@ geyser.network.remote.connect={0} ({1} としてログイン) はアドレス {2
 geyser.network.remote.connect_internal={0} ( {1} としてログイン中) が Java サーバーに接続しました
 geyser.network.remote.disconnect={2} が原因で、{0} はアドレス {1} の Java サーバーから切断されました
 geyser.network.remote.disconnect_internal={1} が原因で、{0} は Java サーバーから切断されました
-geyser.network.remote.authentication_type_mismatch=接続しているJava版のサーバーには有料のJava版のアカウントが必要です
+geyser.network.remote.authentication_type_mismatch=接続したJava版サーバーはMoeWorld Skinアカウントでのログインを要求しています！
 geyser.network.remote.floodgate_login_error=Java版のアカウントとしてログインしようとしました。Floodgateは正しく設定されていますか？
 geyser.network.remote.floodgate_login_error_standalone=正しいJava版のサーバーに接続していることを確認してください。 それ以外の場合は、Floodgateがプラグインとしてインストールされていることを確認し、エラーがないかサーバーログを確認してください。
 geyser.network.remote.floodgate_explanation_plugin=Java版のアカウントなしでログインしたい場合は、Floodgateを使用してください\: {0}
 geyser.network.remote.floodgate_explanation_standalone=Java版のアカウントなしでログインしたい場合、あなたがこのサーバーを運営しているならFloodgateを使用してください\: {0}
-geyser.network.remote.invalid_account=このサーバーには有料の Java アカウントが必要です。
-geyser.network.remote.invalid_xbox_account=このサーバーに参加するには、Xboxにログインしてください。
+geyser.network.remote.invalid_account=このサーバーにはMoeWorld Skinアカウントが必要です
+geyser.network.remote.invalid_xbox_account=このサーバーに参加するには、MC Bedrock版でXboxアカウントにログインしてください（試みたサーバーとは関係ありません）。
 geyser.network.remote.original_disconnect_message=元の切断メッセージ\: {0}
 geyser.network.remote.outdated.proxy=このプロキシソフトウェアは Java版 {0} をサポートしていないため、Geyser に接続するためにはアップデートする必要があります。
 geyser.network.remote.outdated.server=このサーバーは Geyser が接続するために必要な Java版 {0} をサポートしていません。\nサーバーを更新するか、Viaversion プラグインをインストールする必要があります。
