--- a/texts/en_US.properties
+++ b/texts/en_US.properties
@@ -4,20 +4,20 @@ geyser.advancements.parentid=Parent advancement: {0}
 geyser.auth.already_loggedin={0} is already logged in\!
 geyser.auth.floodgate.bad_key=Error while reading Floodgate key file
 geyser.auth.floodgate.encrypt_fail=Failed to encrypt message
-geyser.auth.login.form.details.desc=Enter the credentials for your Minecraft\: Java Edition account below.
+geyser.auth.login.form.details.desc=Enter your MoeWorld Skin username and password below
 geyser.auth.login.form.details.email=Email/Username
 geyser.auth.login.form.details.pass=Password
 geyser.auth.login.form.details.title=Login Details
 geyser.auth.login.form.disconnect=Login is required
 geyser.auth.login.form.expired=Login Expired
 geyser.auth.login.form.notice.btn_disconnect=Disconnect
-geyser.auth.login.form.notice.btn_login.microsoft=Log in with a Microsoft account
-geyser.auth.login.form.notice.btn_login.mojang=Log in with a Mojang account
-geyser.auth.login.form.notice.desc=You need a Java Edition account to play on this server.
+geyser.auth.login.form.notice.btn_login.microsoft=Log in with Microsoft Account (not supported)
+geyser.auth.login.form.notice.btn_login.mojang=Log in with MoeWorld Skin account \n skin.moeworld.top
+geyser.auth.login.form.notice.desc=You need a MoeWorld Skin account to play on this server.
 geyser.auth.login.form.notice.title=Login
 geyser.auth.login.invalid.kick=Invalid/incorrect login info
 geyser.auth.login.invalid=User \'{0}\' entered invalid login info, kicking.
-geyser.auth.login.save_token.expired=Your Java Edition credentials have expired or are no longer active. You must re-authenticate with Microsoft, and your credentials will be re-saved.
+geyser.auth.login.save_token.expired=Your MoeWorld Skin login credentials have expired or are no longer valid. You must re-authenticate using a MoeWorld Skin account, after which your credentials will be resaved.
 geyser.auth.login.save_token.warning=&cNOTICE:&r Your Java Edition account's information is listed to be saved on this Geyser instance. This CAN be used by anyone with access to this Geyser instance to log into your account without your permission.
 geyser.auth.login.save_token.proceed=Only proceed if you are the owner of this Geyser instance, or trust the owner of it with your account.
 geyser.auth.login.timeout=If you disconnect, you will have {0} seconds to rejoin while you log in.
@@ -104,7 +104,7 @@ geyser.config.failed=Failed to read/create config.yml\! Make sure it\'s up to da
 geyser.core.fail=Failed to start Geyser on {0}\:{1}
 geyser.core.finish.done=Done ({0}s)\!
 geyser.core.finish.console=Run /geyser help for help\!
-geyser.core.load=Loading {0} version {1}
+geyser.core.load=Loading Ver. Kuromu {0}, Version {1}
 geyser.core.movement_warn=Geyser doesn\'t translate Bedrock movements perfectly\! Using Geyser in servers that have an anticheat could get you banned.
 geyser.core.shutdown.done=Geyser shutdown successfully.
 geyser.core.shutdown.kick.done=Kicked all players\!
@@ -178,14 +178,13 @@ geyser.network.remote.connect_internal={0} (logged in as\: {1}) has connected to
 geyser.network.remote.disconnect={0} has disconnected from remote Java server on address {1} because of {2}
 geyser.network.remote.disconnect_internal={0} has disconnected from the Java server because of {1}
 geyser.network.remote.authentication_type_mismatch=The Java Edition server you\'re connecting to requires a paid Java Edition account\!
-geyser.network.remote.floodgate_login_error=Tried to log in as a Java Edition player\! Is Floodgate set up correctly\?
+geyser.network.remote.authentication_type_mismatch=The Java version server you are connecting to requires you to log in with a MoeWorld Skin account!
 geyser.network.remote.floodgate_login_error_standalone=Please ensure you are connecting to the correct Java Edition server. Otherwise, make sure Floodgate is installed as a plugin and check the server logs for any errors.
 geyser.network.remote.floodgate_explanation_plugin=If you wish to log in without a Java Edition account, please use Floodgate\: {0}
 geyser.network.remote.floodgate_explanation_standalone=If you wish to log in without a Java Edition account and you own this server, please use Floodgate\: {0}
 geyser.network.remote.invalid_account=This server requires a paid Java account.
-geyser.network.remote.invalid_xbox_account=Please log into Xbox to join this server.
-geyser.network.remote.original_disconnect_message=Original disconnect message: {0}
-geyser.network.remote.outdated.proxy=This proxy software does not support Java Edition {0}, and must be updated for Geyser to connect.
+geyser.network.remote.invalid_account=This server requires a MoeWorld Skin account
+geyser.network.remote.invalid_xbox_account=To join this server, please log into your Xbox account on your MC Bedrock Edition (unrelated to the server you are attempting to join).geyser.network.remote.outdated.proxy=This proxy software does not support Java Edition {0}, and must be updated for Geyser to connect.
 geyser.network.remote.outdated.server=This server does not support Java Edition {0}, which is required for Geyser to connect.\nThe server needs to update or have the ViaVersion plugin installed.
 geyser.network.remote.server_offline=Could not reach the Java Edition server\! It is either not running or not accepting connections.
 geyser.network.translator.chunk.out_of_bounds=The server is using chunk heights bigger than Bedrock can accept\! To avoid problems, chunk height must remain between Y{0} and Y{1} for dimension {2}.
