--- a/texts/es_MX.properties
+++ b/texts/es_MX.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Conseguido\: {0}
 geyser.advancements.parentid=Logro anterior\: {0}
+geyser.advancements.progress=Progreso\: {0}
 
 geyser.auth.already_loggedin={0} ya ha entrado al servidor\!
 geyser.auth.floodgate.bad_key=Error al cargar el archivo con la llave de Floodgate
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Opciones\:
 geyser.bootstrap.args.set_config_option=Opción de configuración establecido del argumento de línea de comando\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Argumento no reconocido '{0}'
 geyser.bootstrap.args.usage=Uso\: {0}
-geyser.bootstrap.command.permission_fail=No tienes el permiso para ejecutar este comando\!
-geyser.bootstrap.command.bedrock_only=¡Este comando solo puede ser ejecutado por un jugador de Bedrock\!
-geyser.bootstrap.command.not_found=¡El comando que has especificado no existe\!
 geyser.bootstrap.config.invalid_port=¡Se encontró un número no válido para el puerto remoto de Geyser en la configuración\!
 geyser.bootstrap.config.outdated=Tu configuración para Geyser esta desactualizada\! Por favor Regenera tu configuración cuando sea posible.
 geyser.bootstrap.config.too_new=Tu configuración de Geyser es demasiado nueva\! Algunos errores podrían ocurrir.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=El software de su servidor no soporta la 
 geyser.bootstrap.unsupported_java.header=¡ESTÁS EJECUTANDO UNA VERSIÓN NO COMPATIBLE DEL JUEGO\!
 geyser.bootstrap.unsupported_java.message=Geyser no funcionará en su versión de Java en el futuro. Por favor, actualice a Java {0}. Versión de Java Actual\: {1}
 geyser.bootstrap.unsupported_proxy=¡Tu {0} proxy está desactualizada\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=¡ESTÁS EJECUTANDO UNA VERSIÓN NO COMPATIBLE DEL JUEGO\!
 geyser.bootstrap.unsupported_server.message=Geyser no funciona en la versión de su servidor como un complemento y requiere que ejecute al menos {0} en su servidor, o que ejecute Geyser de forma independiente o a través de un proxy como Velocity.
 geyser.bootstrap.unsupported_server_type.header=¡Geyser no soporta {0}\!
@@ -58,12 +58,22 @@ geyser.bootstrap.viaversion.blocked=¡Tienes la versión {0} de Java bloqueada e
 geyser.bootstrap.viaversion.too_new=Estás usando una versión más reciente de ViaVersion, por favor actualice Geyser o reporte esto a nuestro Discord.
 geyser.bootstrap.viaversion.too_old=Estás usando una version antigua de ViaVersion, por favor descargue una versión más reciente desde {0}
 
-geyser.chat.secure_info_1=Bedrock players are likely unable to chat, as the server has enforce-secure-profile enabled in settings.
-geyser.chat.secure_info_2=See {0} for more information and details on how to allow chat.
+geyser.chat.secure_info_1=Es probable que los jugadores de Bedrock no puedan chatear, ya que el servidor tiene habilitado forzar un perfil seguro en la configuración.
+geyser.chat.secure_info_2=Ve {0} para más información y detalles sobre cómo habilitar el chat.
 geyser.chat.too_long=Tu mensaje es mayor a 256 letras ({0}) por lo que no ha sido enviado.
 
-geyser.commands.advancedtooltips=Mostrar sugerencias avanzadas (F3 + H en Java)
+geyser.command.bedrock_only=¡Ese comando solo puede ser ejecutado por un jugador de Bedrock\!
+geyser.command.invalid_argument=Argumento del comando no válido\: {0}
+geyser.command.invalid_sender={0} no tiene permitido ejecutar ese comando. Debe ser de tipo {1}
+geyser.command.invalid_syntax=La sintaxis del comando no es válida. La sintaxis correcta es\: {0}
+geyser.command.not_found=Comando desconocido. Usa /geyser help para obtener la lista de comandos.
+geyser.command.permission_fail=¡No tienes el permiso para ejecutar ese comando\!
+geyser.command.player_only=¡Ese comando solo puede ser ejecutado por un jugador\!
+geyser.command.root.extension=El comando principal para la extensión {0} de Geyser
+geyser.command.root.geyser=El comando principal de Geyser
+geyser.commands.advancedtooltips.desc=Mostrar información avanzada (F3 + H en Java)
 geyser.commands.advancements.desc=Abre el menú de logros de Java
+geyser.commands.connectiontest.desc=Comprueba si tu servidor es accesible para otros jugadores
 geyser.commands.dump.collecting=Recopilando reporte
 geyser.commands.dump.collect_error=Fallo al recolectar reporte, revise la consola para más información
 geyser.commands.dump.collect_error_short=Fallo al recolectar reporte
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Fallo al escribir reporte, revisa la consola pa
 geyser.commands.dump.write_error_short=Fallo al escribir reporte
 geyser.commands.extensions.desc=Muestra todas las extensiones cargadas.
 geyser.commands.extensions.header=--- Extensiones de Geyser (Página {0}/{1}) ----
+geyser.commands.exthelp.desc=Lista todos los comandos añadidos por esta extensión.
 geyser.commands.help.desc=Muestra ayuda para todos los comandos registrados.
 geyser.commands.help.header=---- Mostrando Ayuda para\: Geyser (Pagina {0}/{1}) ----
-geyser.commands.invalid=Comando Invalido\! Usa /geyser help para ver la lista de comandos.
 geyser.commands.list.desc=Lista de todos los jugadores conectados con Geyser.
 geyser.commands.list.message=&eJugadores activos ({0})\: &f{1}
 geyser.commands.offhand.desc=Pone un objeto en tu mano secundaria.
+geyser.commands.ping.desc=Muestra la latencia que tienes actualmente.
+geyser.commands.ping.message=Tu latencia actual es de {0}ms.
 geyser.commands.registered=Comando Registrado {0}
 geyser.commands.reload.desc=Recarga la configuración de Geyser. Expulsa a todos los jugadores cuando lo usa\!
 geyser.commands.reload.kick=Geyser se ha recargado... Perdona la inconveniencia\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Fallo al comprobar actualizaciones
 
 geyser.config.failed=¡Error al leer/crear config.yml\! ¡Asegúrese de que está actualizado y/o permita leer+escribir\!
 
+geyser.core.dev_build=¡Estás ejecutando una versión de desarrollo de Geyser\! Por favor, reporta cualquier error que encuentres en nuestro servidor de Discord\: {0}.
 geyser.core.fail=Geyser falló al iniciar en {0}\:{1}
 geyser.core.finish.done=¡Listo ({0}s)\!
 geyser.core.finish.console=¡Escribe /geyser help para obtener ayuda\!
-geyser.core.finish.gui=Escribe el comando -> help para ayuda\!
 geyser.core.load=Cargando {0} versión {1}
 geyser.core.movement_warn=¡Geyser no traduce perfectamente los movimientos de Bedrock\! Usar Geyser en servidores que tienen un anticheat podría resultar en que lo baneen.
 geyser.core.shutdown.done=Geyser ha sido apagado correctamente.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Sacando {0} Jugador(es)
 geyser.core.shutdown.kick.message=Apagando Geyser Proxy.
 geyser.core.shutdown=Apagando Geyser.
 geyser.core.start=Geyser se ha activado en la Ip y puerto {0}\:{1}
+geyser.core.start.ip_suppressed=Geyser se inició en el puerto UDP {0}
 
 geyser.entity.player.failed_list=¡No hemos recibido el paquete PlayerListEntry antes de que apareciera el jugador\! Ignoraremos al Jugador {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Error al activar la extension {0}\:
 geyser.extensions.enable.success=Extensión {0} activada
 geyser.extensions.disable.failed=Error al desactivar la extencion {0}\:
 geyser.extensions.disable.success=Extensión {0} desactivada
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Si
 geyser.gui.exit.deny=No
 geyser.gui.exit.message=¿Estas seguro que quieres salir?
 geyser.gui.graph.loading=Cargando...
 geyser.gui.graph.usage=Uso de Memoria Ram\: {0}mb ({1}% Libre)
-geyser.gui.menu.commands=Comandos
 geyser.gui.menu.file=Archivo
 geyser.gui.menu.file.exit=Salir
 geyser.gui.menu.file.open_folder=Abrir carpeta de Geyser
@@ -151,7 +164,7 @@ geyser.inventory.unusable_item.slot=Este espacio no existe en\nel Inventario en 
 
 geyser.language.load_failed=No se ha podido cargar el mapa de Geyser por {0}
 
-geyser.locale.download.en_us=Downloading Minecraft JAR to extract required files, please wait... (this may take some time depending on the speed of your internet connection)
+geyser.locale.download.en_us=Descargando archivo JAR de Minecraft para extraer los archivos requeridos, por favor espera... (podría tardar dependiendo de la velocidad de tu conexión)
 geyser.locale.download.en_us.done=¡El JAR de Minecraft se ha descargado y cargado con éxito\!
 geyser.locale.fail.asset_cache=Ha fallado cargar el recurso de caché\: {0}
 geyser.locale.fail.en_us=Ha fallado el proceso de descarga y extracción del archivo de traducción en_us\!
@@ -214,4 +227,4 @@ geyser.statistics.killed_by=Asesinado por
 geyser.statistics.none=No hay estadísticas para esta sección
 
 geyser.version.new=Hay una nueva actualización de Geyser disponible para soportar la versión {0} de Bedrock. Descárgala aquí\: {1}
-geyser.version.new.on_disconnect=&aThe latest Geyser release supports this Bedrock version. A server admin can download the update at &9{0}
+geyser.version.new.on_disconnect=&aLa última versión de Geyser soporta esta versión de Bedrock. Un administrador del servidor puede descargar la actualización en &9{0}
