--- a/texts/pl_PL.properties
+++ b/texts/pl_PL.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Zdobyte\: {0}
 geyser.advancements.parentid=Nadrzędne osiągnięcie\: {0}
+geyser.advancements.progress=Progress\: {0}
 
 geyser.auth.already_loggedin={0} jest już zalogowany\!
 geyser.auth.floodgate.bad_key=Błąd podczas odczytywania pliku klucza Floodgate
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Opcje\:
 geyser.bootstrap.args.set_config_option=Opcja konfiguracji ustawiona przez argument wiersza polecenia\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Nieropoznany argument '{0}'
 geyser.bootstrap.args.usage=Użycie\: {0}
-geyser.bootstrap.command.permission_fail=Nie masz uprawnień do wykonania tej komendy\!
-geyser.bootstrap.command.bedrock_only=Tej komendy mogą używać wyłącznie gracze Bedrock Edition\!
-geyser.bootstrap.command.not_found=Podane polecenie nie istnieje\!
 geyser.bootstrap.config.invalid_port=Nieprawidłowy numer zdalnego portu Geyser w pliku konfiguracyjnym\!
 geyser.bootstrap.config.outdated=Twoja konfiguracja Geyser jest nieaktualna\! Proszę zregeneruj konfigurację kiedy możliwe.
 geyser.bootstrap.config.too_new=Twoja konfiguracja Geyser jest zbyt nowa\! Mogą wystąpić błędy.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Oprogramowanie serwera nie obsługuje wer
 geyser.bootstrap.unsupported_java.header=UŻYWASZ NIEWSPIERANĄ WERSJĘ JAVY\!
 geyser.bootstrap.unsupported_java.message=Geyser nie będzie działać z twoją wersją Javy w przyszłości. Proszę zaktualizuj ją do Javy {0}. Aktualna wersja Javy\: {1}
 geyser.bootstrap.unsupported_proxy=Twój serwer proxy {0} jest nieaktualny\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=UŻYWASZ NIEWSPIERANĄ WERSJĘ GRY\!
 geyser.bootstrap.unsupported_server.message=Geyser nie działa na Twojej wersji serwera jako wtyczce i wymaga uruchomienia przynajmniej {0} na serwerze, lub uruchamiasz Geyser samodzielnie lub przez proxy takie jak Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser nie obsługuje {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Gracze Bedrocka prawdopodobnie nie będą mogli rozmaw
 geyser.chat.secure_info_2=Zobacz {0}, aby uzyskać więcej informacji i szczegółów na temat zezwalania na czat.
 geyser.chat.too_long=Twoja wiadomość ma więcej niż 256 znaków ({0}) dlatego nie została wysłana.
 
-geyser.commands.advancedtooltips=Przełącz wyświetlanie zaawansowanych podpowiedzi (F3 + H na Java)
+geyser.command.bedrock_only=To polecenie może wykonać tylko gracz Bedrock\!
+geyser.command.invalid_argument=Nieprawidłowy argument polecenia\: {0}
+geyser.command.invalid_sender={0} nie może wykonać tego polecenia. Musi być typu {1}
+geyser.command.invalid_syntax=Nieprawidłowa składnia polecenia. Poprawna składnia to\: {0}
+geyser.command.not_found=Nieznane polecenie. Wpisz /geyser help, aby uzyskać listę poleceń.
+geyser.command.permission_fail=Nie masz uprawnień do wykonania tego polecenia\!
+geyser.command.player_only=To polecenie może wykonać tylko gracz\!
+geyser.command.root.extension=Główne polecenie dla rozszerzenia {0} Geyser
+geyser.command.root.geyser=Główne polecenie dla Geyser
+geyser.commands.advancedtooltips.desc=Przełącz wyświetlanie zaawansowanych podpowiedzi (F3 + H na Java)
 geyser.commands.advancements.desc=Otwórz menu osiągnięć z wersji Java
+geyser.commands.connectiontest.desc=Tests whether your server is reachable for other players
 geyser.commands.dump.collecting=Zbieranie informacji
 geyser.commands.dump.collect_error=Nie udało się zebrać zrzutu informacji, więcej szczegółów w konsoli
 geyser.commands.dump.collect_error_short=Nie udało się zebrać zrzutu informacji
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Nie udało się przesłać pliku dump, sprawdź
 geyser.commands.dump.write_error_short=Nie udało się zapisać pliku dump
 geyser.commands.extensions.desc=Pokazuje wszystkie załadowane rozszerzenia.
 geyser.commands.extensions.header=---- Rozszerzenia Geyser (strona {0}/{1}) ----
+geyser.commands.exthelp.desc=Wyświetla wszystkie polecenia dodane przez to rozszerzenie.
 geyser.commands.help.desc=Pokazuje pomoc dla wszystkich komend.
 geyser.commands.help.header=---- Pomoc Geyser (Strona {0}/{1}) ----
-geyser.commands.invalid=Nieprawidłowa komenda\! Użyj /geyser help dla listy komend.
 geyser.commands.list.desc=Lista wszystkich graczy połączonych przez Geyser.
 geyser.commands.list.message=&eGracze Online ({0})\: &f{1}
 geyser.commands.offhand.desc=Przekłada item do twojej drugiej ręki.
+geyser.commands.ping.desc=Pokazuje twój bieżący ping.
+geyser.commands.ping.message=Twój obecny ping to {0}ms.
 geyser.commands.registered=Zarejestrowano komendę {0}
 geyser.commands.reload.desc=Przeładowuję konfigurację Geyser. Rozłącza wszystkich graczy gdy użyta\!
 geyser.commands.reload.kick=Geyser został przeładowany... przepraszamy za niedogodności\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Błąd sprawdzania aktualizacji
 
 geyser.config.failed=Nie udało się przeczytać/stworzyć config.yml\! Upewnij się, że jest aktualne i/lub czytalne+zapiswalne\!
 
+geyser.core.dev_build=Używasz deweloperskiej kompilacji Geyser\! Prosimy o zgłaszanie wszelkich błędów, które znajdziesz na naszym serwerze Discord\: {0}.
 geyser.core.fail=Nie udało się uruchomić Geyser na {0}\:{1}
 geyser.core.finish.done=Wykonano ({0}s)\!
 geyser.core.finish.console=Jeśli chcesz uzyskać pomoc, wpisz /geyser help
-geyser.core.finish.gui=Użyj komendy -> help jeśli chcesz uzyskać pomoc\!
 geyser.core.load=Ładowanie {0} wersja {1}
 geyser.core.movement_warn=Geyser nie tłumaczy perfekcyjnie twoich ruchów\! Używanie Geyser 'a na serverach może skutkować Banem, ponieważ anticheat może uznać to za oszustwo.
 geyser.core.shutdown.done=Geyser pomyślnie wyłączony.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Wyrzucanie {0} graczy
 geyser.core.shutdown.kick.message=Geyser został wyłączony.
 geyser.core.shutdown=Wyłączanie Geyser.
 geyser.core.start=Uruchomiono Geyser o {0}\:{1}
+geyser.core.start.ip_suppressed=Uruchomiono Geyser na porcie UDP {0}
 
 geyser.entity.player.failed_list=Nie otrzymano pakietu PlayerListEntry przed przyzwaniem gracza\! Ignorujemy {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Błąd podczas włączania rozszerzenia {0}\:
 geyser.extensions.enable.success=Włączono rozszerzenie {0}
 geyser.extensions.disable.failed=Błąd podczas włączania rozszerzenia {0}\:
 geyser.extensions.disable.success=Wyłączone rozszerzenie {0}
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Tak
 geyser.gui.exit.deny=Nie
 geyser.gui.exit.message=Czy na pewno chcesz wyjść?
 geyser.gui.graph.loading=Ładowanie...
 geyser.gui.graph.usage=Użycie\: {0}mb ({1}% wolnych)
-geyser.gui.menu.commands=Komendy
 geyser.gui.menu.file=Plik
 geyser.gui.menu.file.exit=Wyjście
 geyser.gui.menu.file.open_folder=Otwórz folder Geyser
