--- a/texts/pt_BR.properties
+++ b/texts/pt_BR.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Recebeu\: {0}
 geyser.advancements.parentid=Progresso equivalente\: {0}
+geyser.advancements.progress=Progress\: {0}
 
 geyser.auth.already_loggedin={0} já está logado\!
 geyser.auth.floodgate.bad_key=Ocorreu um erro enquanto o arquivo de chave do Floodgate estava sendo lido
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Opções\:
 geyser.bootstrap.args.set_config_option=Opção de configuração definida a partir do argumento da linha de comando\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Argumento não reconhecido '{0}'
 geyser.bootstrap.args.usage=Uso\: {0}
-geyser.bootstrap.command.permission_fail=Você não tem permissão para executar este comando\!
-geyser.bootstrap.command.bedrock_only=Este comando só pode ser executado por um jogador Bedrock\!
-geyser.bootstrap.command.not_found=O comando que você especificou não existe\!
 geyser.bootstrap.config.invalid_port=Número inválido encontrado para a porta remota do Geyser na configuração\!
 geyser.bootstrap.config.outdated=Sua configuração de Geyser está desatualizada\! Por favor, regenere sua configuração quando possível.
 geyser.bootstrap.config.too_new=Sua configuração de Geyser é muito nova\! Podem ocorrer erros.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Seu software de servidor não suporta a v
 geyser.bootstrap.unsupported_java.header=VOCÊ ESTÁ USANDO UMA VERSÃO NÃO SUPORTADA DO JAVA\!
 geyser.bootstrap.unsupported_java.message=O Geyser não funcionará na sua versão do Java no futuro. Por favor, atualize para o Java {0}. Versão atual do Java\: {1}
 geyser.bootstrap.unsupported_proxy=Seu proxy {0} está desatualizado\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=VOCÊ ESTÁ RODANDO UMA VERSÃO NÃO SUPORTADA DO JOGO\!
 geyser.bootstrap.unsupported_server.message=O Geyser não funciona versão de seu servidor como um plugin e requer que você execute pelo menos {0} em seu servidor, ou que você execute o Geyser de forma independente através de um proxy como Bungeecord ou Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser não suporta {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Os jogadores de Bedrock provavelmente não vão ser ca
 geyser.chat.secure_info_2=Veja {0} para obter mais informações e detalhes sobre como permitir o bate-papo.
 geyser.chat.too_long=Sua mensagem tem mais de 256 caracteres ({0}), por isso não foi enviada.
 
-geyser.commands.advancedtooltips=Mostrar/ocultar descrições avançadas (F3 + H na Java)
+geyser.command.bedrock_only=Esse comando só pode ser executado por um jogador Bedrock\!
+geyser.command.invalid_argument=Argumento de comando inválido\: {0}
+geyser.command.invalid_sender={0} não pode executar esse comando. Deve ser do tipo {1}
+geyser.command.invalid_syntax=Sintaxe de comando inválida. A sintaxe correta é\: {0}
+geyser.command.not_found=Comando desconhecido\! Tente /geyser help para obter uma lista de comandos.
+geyser.command.permission_fail=Você não tem permissão para executar esse comando\!
+geyser.command.player_only=Esse comando só pode ser executado por um jogador\!
+geyser.command.root.extension=O comando principal para a extensão {0} do Geyser
+geyser.command.root.geyser=O comando principal do Geyser
+geyser.commands.advancedtooltips.desc=Alternar exibição de dicas de ferramentas avançadas (F3 + H em Java)
 geyser.commands.advancements.desc=Abrir menu de progressos da Java
+geyser.commands.connectiontest.desc=Tests whether your server is reachable for other players
 geyser.commands.dump.collecting=Coletando informações do dump
 geyser.commands.dump.collect_error=Falha ao coletar informações do dump, verifique o console para obter mais informações
 geyser.commands.dump.collect_error_short=Falha ao coletar informações de dump
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Falha ao gravar o arquivo dump, verifique o con
 geyser.commands.dump.write_error_short=Falha ao gravar arquivo dump
 geyser.commands.extensions.desc=Mostra todas as extensões carregadas.
 geyser.commands.extensions.header=---- Extensões Geyser (Página {0}/{1}) ----
+geyser.commands.exthelp.desc=Lista todos os comandos adicionados por esta extensão.
 geyser.commands.help.desc=Mostra ajuda para todos os comandos registrados.
 geyser.commands.help.header=---- Mostrando ajuda para\: Geyser (Página {0}/{1}) ----
-geyser.commands.invalid=Comando inválido\! Tente /geyser help para obter uma lista de comandos.
 geyser.commands.list.desc=Liste todos os jogadores conectados através do Geyser.
 geyser.commands.list.message=&eJogadores Online ({0})\: &f{1}
 geyser.commands.offhand.desc=Coloca um item em sua mão.
+geyser.commands.ping.desc=Mostra o seu ping atual.
+geyser.commands.ping.message=Seu ping atual é {0}ms.
 geyser.commands.registered=Comando registrado {0}
 geyser.commands.reload.desc=Recarrega as configurações do Geyser. Chuta todos os jogadores quando usado\!
 geyser.commands.reload.kick=Geyser foi recarregado... desculpe pelo transtorno\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Falha ao verificar atualizações
 
 geyser.config.failed=Falha ao ler/criar config.yml\! Certifique-se de que está atualizado e/ou legível e gravável\!
 
+geyser.core.dev_build=Você está rodando uma versão de desenvolvimento do Geyser\! Por favor, reporte qualquer erro que encontrar em nosso servidor no Discord\: {0}.
 geyser.core.fail=Falha ao iniciar o Geyser em {0}\: {1}
 geyser.core.finish.done=Concluído ({0} s)\!
 geyser.core.finish.console=Execute /geyser help para obter ajuda\!
-geyser.core.finish.gui=Execute comandos -> help para obter ajuda\!
 geyser.core.load=Carregando {0} versão {1}
 geyser.core.movement_warn=O Geyser não traduz os movimentos do Bedrock perfeitamente\! Usar o Geyser em servidores com anticheat pode fazer com que você seja banido.
 geyser.core.shutdown.done=Geyser encerrado com sucesso.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Chutando {0} jogador(es)
 geyser.core.shutdown.kick.message=Proxy Geyser encerrando.
 geyser.core.shutdown=Desligando o Geyser.
 geyser.core.start=Geyser iniciado em {0}\: {1}
+geyser.core.start.ip_suppressed=Geyser iniciado na porta UDP {0}
 
 geyser.entity.player.failed_list=Não recebi o pacote PlayerListEntry antes de gerar o jogador\! Ignoramos o jogador {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Erro ao ativar a extensão {0}\:
 geyser.extensions.enable.success=Extensão ativada {0}
 geyser.extensions.disable.failed=Erro ao ativar a extensão {0}\:
 geyser.extensions.disable.success=Extensão desativada {0}
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Sim
 geyser.gui.exit.deny=Não
 geyser.gui.exit.message=Você tem certeza que quer sair?
 geyser.gui.graph.loading=Carregando...
 geyser.gui.graph.usage=Uso\: {0}mb ({1}% livre)
-geyser.gui.menu.commands=Comandos
 geyser.gui.menu.file=Arquivo
 geyser.gui.menu.file.exit=Sair
 geyser.gui.menu.file.open_folder=Abra a pasta Geyser
