--- a/texts/ar_SA.properties
+++ b/texts/ar_SA.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=تم كسبه\: {0}
 geyser.advancements.parentid=والد التقدم\: {0}
+geyser.advancements.progress=Progress\: {0}
 
 geyser.auth.already_loggedin={0} مسجل الدخول بالفعل\!
 geyser.auth.floodgate.bad_key=خطأ اثناء قراءة ملف مفتاح Floodgate
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=الإعدادات\:
 geyser.bootstrap.args.set_config_option=تم تغيير إعداد من سطر الأوامر\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=خيار غير معروف "{0}"
 geyser.bootstrap.args.usage=الإستخدام\: {0}
-geyser.bootstrap.command.permission_fail=ليس لديك الصلاحية لاستخدام هذا الأمر\!
-geyser.bootstrap.command.bedrock_only=لا يمكن تنفيذ هذا الأمر إلا بواسطة لاعب Bedrock\!
-geyser.bootstrap.command.not_found=الأمر الذي حددته غير موحود\!
 geyser.bootstrap.config.invalid_port=تم العثور على رقم غير صالح لمنفذ غيزر البعيد في الإعداد\!
 geyser.bootstrap.config.outdated=ملف إعدادات Geyser خاصتك قديم\! يرجى تجديد ملف إعداداتك عندما يكون ذلك ممكناً.
 geyser.bootstrap.config.too_new=ملف إعدادات Geyser خاصتك جديد جداً\! من الممكن حصول بعض الأخطاء.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Your server software does not support the
 geyser.bootstrap.unsupported_java.header=أنت تستخدم إصدارًا غير مدعوم لجاڤا\!
 geyser.bootstrap.unsupported_java.message=لن يعمل جيزر بتصدير جاڤا لديك. رجائًا أستخدم جاڤا {0}. تصدير جاڤا لديك\: {1}
 geyser.bootstrap.unsupported_proxy=Your {0} proxy is outdated\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=انت تستخدم اصدار غير مدعوم لهذه اللعبه\!
 geyser.bootstrap.unsupported_server.message=Geyser لا يعمل على إصدار الserver الخاص بك كplugin ويتطلب أن تقوم بتشغيل {0} على الأقل على الserver الخاص بك، أو أن تقوم بتشغيل geyser standalone أو من خلال وكيل مثل Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser does not support {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Bedrock players are likely unable to chat, as the serv
 geyser.chat.secure_info_2=See {0} for more information and details on how to allow chat.
 geyser.chat.too_long=رسالتك اكبر من 256 حرف احرف ({0}) لهذا لم يتم إرسالها.
 
-geyser.commands.advancedtooltips=Toggle showing Advanced Tooltips (F3 + H on Java)
+geyser.command.bedrock_only=That command can only be executed by a Bedrock player\!
+geyser.command.invalid_argument=Invalid command argument\: {0}
+geyser.command.invalid_sender={0} is not allowed to execute that command. Must be of type {1}
+geyser.command.invalid_syntax=Invalid command syntax. Correct syntax is\: {0}
+geyser.command.not_found=Unknown command\! Try /geyser help for a list of commands.
+geyser.command.permission_fail=You do not have permission to execute that command\!
+geyser.command.player_only=That command can only be executed by a player\!
+geyser.command.root.extension=The main command for the {0} Geyser extension
+geyser.command.root.geyser=The main command for Geyser
+geyser.commands.advancedtooltips.desc=Toggle showing Advanced Tooltips (F3 + H on Java)
 geyser.commands.advancements.desc=افتح قائمة تقدمات Java
+geyser.commands.connectiontest.desc=Tests whether your server is reachable for other players
 geyser.commands.dump.collecting=تجميع المعلومات
 geyser.commands.dump.collect_error=فشل في تجميع المعلومات, تحقق من وحدة التحكم للمزيد من المعلومات
 geyser.commands.dump.collect_error_short=فشل في تجميع المعلومات
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=فشل في كتابة المعلومات, تح
 geyser.commands.dump.write_error_short=فشل في كتابة المعلومات
 geyser.commands.extensions.desc=Shows all the loaded extensions.
 geyser.commands.extensions.header=---- Geyser Extensions (Page {0}/{1}) ----
+geyser.commands.exthelp.desc=Lists all commands added by this extension.
 geyser.commands.help.desc=يظهر تعليمات لجميع الأوامر المسجلة.
 geyser.commands.help.header=---- أظهر المساعدة لGeyser (صفحة {0}/{1})
-geyser.commands.invalid=أمر خاطئ\! جرب /geyser help لقائمة للأوامر.
 geyser.commands.list.desc=قائمة اللاعبين المتصلين خلال Geyser.
 geyser.commands.list.message=&eاللاعبون\: ({0})\: &f{1}
 geyser.commands.offhand.desc=يضع عنصراً في يدك الأخرى.
+geyser.commands.ping.desc=Shows your current ping.
+geyser.commands.ping.message=Your current ping is {0}ms.
 geyser.commands.registered=الأوامر المسجلة {0}
 geyser.commands.reload.desc=يعيد تحميل إعدادات Geyser. سيطرد كل اللاعبين عندما تستخدم هذا الأمر\!
 geyser.commands.reload.kick=تم إعادة تحميل Geyser, أسف للإزعاج\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=فشل التحقق عن تحديثات
 
 geyser.config.failed=فشل إنشاء/قرائة config.yml\! تأكد من أنه محدث و/أو قابل للقرائة+الكتابة\!
 
+geyser.core.dev_build=You are running a development build of Geyser\! Please report any bugs you find on our Discord server\: {0}.
 geyser.core.fail=فشل بدأ Geyser علي {0}\:{1}
 geyser.core.finish.done=تم ({0}ثواني)\!
 geyser.core.finish.console=شغل /geyser help للمساعدة\!
-geyser.core.finish.gui=شغل أوامر -> help للمساعدة\!
 geyser.core.load=جاري تحميل {0} إصدار {1}
 geyser.core.movement_warn=لا يترجم Geyser حركات Bedrock بطريقة مثالية\! قد يؤدي استخدام Geyser في الخوادم التي تستخدم مانع للغش بحظرك منها.
 geyser.core.shutdown.done=تم اغلاق Geyser بنجاح.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=طرد {0} لاعب(ين)
 geyser.core.shutdown.kick.message=إغلاق خادم Geyser.
 geyser.core.shutdown=إغلاق Geyser.
 geyser.core.start=بدأ Geyser علي {0}\:{1}
+geyser.core.start.ip_suppressed=Started Geyser on UDP port {0}
 
 geyser.entity.player.failed_list=لم يتم استلام رزمة PlayerListEntry قبل ان يتم خلق اللاعب\! نحن نتجاهل اللاعب {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Error enabling extension {0}\:
 geyser.extensions.enable.success=Enabled extension {0}
 geyser.extensions.disable.failed=Error enabling extension {0}\:
 geyser.extensions.disable.success=Disabled extension {0}
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=نعم
 geyser.gui.exit.deny=لا
 geyser.gui.exit.message=هل انت متاكد انك تريد الخروج؟
 geyser.gui.graph.loading=جار التحميل...
 geyser.gui.graph.usage=الإستخدام\: {0} ميجابايت (يوجد {1}%)
-geyser.gui.menu.commands=أوامر
 geyser.gui.menu.file=ملف
 geyser.gui.menu.file.exit=خروج
 geyser.gui.menu.file.open_folder=فتح مجلد Geyser
