--- a/texts/cs_CZ.properties
+++ b/texts/cs_CZ.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Získán\: {0}
 geyser.advancements.parentid=Předcházející\: {0}
+geyser.advancements.progress=Průběh\: {0}
 
 geyser.auth.already_loggedin={0} je již přihlášen\!
 geyser.auth.floodgate.bad_key=Chyba při čtení klíče Floodgate
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Možnosti\:
 geyser.bootstrap.args.set_config_option=Možnost nastavena z argumentu příkazového řádku\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Neznámý argument '{0}'
 geyser.bootstrap.args.usage=Použití\: {0}
-geyser.bootstrap.command.permission_fail=Nemáte oprávnění použít tento příkaz\!
-geyser.bootstrap.command.bedrock_only=Tento příkaz může být spuštěn pouze v Bedrock edici\!
-geyser.bootstrap.command.not_found=Příkaz jejž jste zadali, neexistuje\!
 geyser.bootstrap.config.invalid_port=Bylo nalezeno neplatné číslo pro vzdálený port Geyser v konfiguraci\!
 geyser.bootstrap.config.outdated=Váš konfigurační soubor Geyseru je příliš starý\! Prosím co nejdříve ho znovu vygenerujte.
 geyser.bootstrap.config.too_new=Váš konfigurační soubor Geyseru je příliš nový\! Mohou se objevit chyby.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Java verze ({0}) potřebná pro Geyser ne
 geyser.bootstrap.unsupported_java.header=POUŽÍVÁTE NEPODPOROVANOU VERZI JAVY\!
 geyser.bootstrap.unsupported_java.message=Geyser nebude v budoucnu fungovat na vaší verzi Javy. Prosím aktualizujte na Javu {0}. Aktuální verze Javy\: {1}
 geyser.bootstrap.unsupported_proxy=Vaše {0} proxy je zastaralé\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=POUŽÍVÁŠ NEPODPOROVANOU VERZI HRY\!
 geyser.bootstrap.unsupported_server.message=Geyser nefunguje na vaší verzi serveru jako plugin a vyžaduje alespoň {0} spuštěné na serveru, použití Geyser standalone nebo prostřednictvím proxy serveru, jako je Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser nepodporuje {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Hráči na bedrocku nejspíše nemohou chatovat, jelik
 geyser.chat.secure_info_2=Viz {0} pro více informací a podrobností o tom jak povolit chat.
 geyser.chat.too_long=Vaše zpráva byla delší než 256 znaků ({0}), takže nebyla odeslána.
 
-geyser.commands.advancedtooltips=Přepnout zobrazení pokročilých nástrojů (F3 + H v Javě)
+geyser.command.bedrock_only=Ten příkaz může býti přikázán pouze hráčem Bedrock edice\!
+geyser.command.invalid_argument=Neplatný parametr příkazu\: {0}
+geyser.command.invalid_sender=Hráči {0} není povoleno vykonat tento příkaz. Musí býti typu {1}
+geyser.command.invalid_syntax=Neplatná syntax příkazu. {0} je správná syntax
+geyser.command.not_found=Neznámý příkaz\! Zkuste /geyser help pro list příkazů.
+geyser.command.permission_fail=Nemáte oprávnění k vykonání tohoto příkazu\!
+geyser.command.player_only=Tento příkaz může býti vykonán pouze hráčem\!
+geyser.command.root.extension=Hlavní příkaz pro rozšíření Geyseru {0}
+geyser.command.root.geyser=Hlavní příkaz Geyseru
+geyser.commands.advancedtooltips.desc=Přepnout zobrazování rozšířených popisů nástrojů (F3 + H na Javě)
 geyser.commands.advancements.desc=Otevřít menu pokroků Javy
+geyser.commands.connectiontest.desc=Vyzkouší, zda je váš server dostupný pro ostatní hráče
 geyser.commands.dump.collecting=Sbírám výpis
 geyser.commands.dump.collect_error=Nepovedlo se sebrat výpis, zkontrolujte konzoli pro víc informací
 geyser.commands.dump.collect_error_short=Nepovedlo se sebrat výpis
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Nepovedlo ze zapsat soubor s výpisem, zkontrol
 geyser.commands.dump.write_error_short=Nepovedlo se zapsat soubor výpisu
 geyser.commands.extensions.desc=Zobrazuje všechna načtená rozšíření.
 geyser.commands.extensions.header=---- Rozšíření Geyseru (Strana {0}/{1}) ----
+geyser.commands.exthelp.desc=Zobrazí všechny příkazy přidané tímto rozšíření.
 geyser.commands.help.desc=Ukáže nápovědu pro všechny zaregistrované příkazy.
 geyser.commands.help.header=---- Nápověda pro\: Geyser (Stránka {0}/{1}) ----
-geyser.commands.invalid=Chybný příkaz\! Zkuste /geyser help pro list příkazů.
 geyser.commands.list.desc=Vypíše seznam všech hráčů připojených Geyserem.
 geyser.commands.list.message=&eOnline Hráči ({0})\: &f{1}
 geyser.commands.offhand.desc=Vloží předmět do vaší druhé ruky.
+geyser.commands.ping.desc=Zobrazí váš současný ping.
+geyser.commands.ping.message=Váš současný ping je {0}ms.
 geyser.commands.registered=Zaregistrovaný příkaz {0}
 geyser.commands.reload.desc=Znovu načte konfigurační soubor Geyseru. Vyhodí všechny hráče když je použito\!
 geyser.commands.reload.kick=Geyser byl znovu načten... omlouváme se za vyrušení\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Selhala kontrola aktualizací
 
 geyser.config.failed=Selhalo přečtení/vytvoření config.yml\! Ujistěte se že je aktualní a/nebo čitelný+zapisovatelný\!
 
+geyser.core.dev_build=Používáte vývojové sestavení Geyseru\! Prosím, nahlašte jakékoli chyby, na které příjdete, na našem Discord serveru\: {0}.
 geyser.core.fail=Selhalo spuštění Geyseru na {0}\:{1}
 geyser.core.finish.done=Hotovo ({0}s)\!
 geyser.core.finish.console=Spusťte /geyser help pro nápovědu\!
-geyser.core.finish.gui=Spusťte příkazy -> help pro nápovědu\!
 geyser.core.load=Načítání {0} verze {1}
 geyser.core.movement_warn=Pohyby uživatelů na Bedrocku nejdou přeložit perfektně\! Použití Geyseru na serverech jejichž anticheat není připraven pro Geyser, může vést k banu.
 geyser.core.shutdown.done=Geyser se úspěšně vypnul.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Vyhazuji {0} hráče(ů)
 geyser.core.shutdown.kick.message=Geyser Proxy se vypíná.
 geyser.core.shutdown=Vypínání Geyseru.
 geyser.core.start=Geyser spuštěn na {0}\:{1}
+geyser.core.start.ip_suppressed=Spustil Geyser na UDP portě {0}
 
 geyser.entity.player.failed_list=Nebyl přijmut PlayerListEntry paket před zrozením hráče\! Budeme ignorovat hráče {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Chyba povolování rozšíření {0}\:
 geyser.extensions.enable.success=Zapnuto rozšíření {0}
 geyser.extensions.disable.failed=Chyba povolování rozšíření {0}\:
 geyser.extensions.disable.success=Vypnuto rozšíření {0}
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Ano
 geyser.gui.exit.deny=Ne
 geyser.gui.exit.message=Opravdu chcete odejít?
 geyser.gui.graph.loading=Načítání...
 geyser.gui.graph.usage=Využití\: {0}mb ({1}% volno)
-geyser.gui.menu.commands=Příkazy
 geyser.gui.menu.file=Soubor
 geyser.gui.menu.file.exit=Odejít
 geyser.gui.menu.file.open_folder=Otevřít složku Geyseru
