--- a/texts/de_DE.properties
+++ b/texts/de_DE.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Abgeschlossen\: {0}
 geyser.advancements.parentid=Übergeordneter Fortschritt\: {0}
+geyser.advancements.progress=Fortschritt\: {0}
 
 geyser.auth.already_loggedin={0} ist bereits eingeloggt\!
 geyser.auth.floodgate.bad_key=Fehler beim Einlesen der Floodgate Schlüsseldatei
@@ -10,7 +11,7 @@ geyser.auth.login.form.details.pass=Passwort
 geyser.auth.login.form.details.title=Anmeldedaten
 geyser.auth.login.form.disconnect=Anmeldung erforderlich
 geyser.auth.login.form.expired=Anmeldung abgelaufen
-geyser.auth.login.form.notice.btn_disconnect=Abbrechen
+geyser.auth.login.form.notice.btn_disconnect=Trennen
 geyser.auth.login.form.notice.btn_login.microsoft=Mit einem Microsoft-Account einloggen
 geyser.auth.login.form.notice.btn_login.mojang=Mit Mojang Account einloggen
 geyser.auth.login.form.notice.desc=Du brauchst einen Java Edition Account um auf diesem Server zu spielen.
@@ -33,10 +34,7 @@ geyser.bootstrap.args.options=Optionen\:
 geyser.bootstrap.args.set_config_option=Config Einstellung durch Konsolenargument geändert\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Unbekannter Parameter '{0}'
 geyser.bootstrap.args.usage=Verwendung\: {0}
-geyser.bootstrap.command.permission_fail=Du hast keine Berechtigung diesen Befehl auszuführen\!
-geyser.bootstrap.command.bedrock_only=Dieser Befehl kann nur von einem Bedrock Spieler ausgeführt werden\!
-geyser.bootstrap.command.not_found=Der angegebene Befehl existiert nicht\!
-geyser.bootstrap.config.invalid_port=Ungültiger Eintrag für Geyser Remote-Port in der der Konfiguration gefunden\!
+geyser.bootstrap.config.invalid_port=Ungültiger Eintrag für Geysers Remote-Port in der Konfiguration gefunden\!
 geyser.bootstrap.config.outdated=Deine Geyser Config ist veraltet\! Bitte regeneriere sie wenn möglich.
 geyser.bootstrap.config.too_new=Deine Geyser Config ist zu neu\! Es könnten Probleme auftreten.
 geyser.bootstrap.floodgate.auto_loaded=Floodgate Schlüssel wurde automatisch geladen
@@ -47,14 +45,16 @@ geyser.bootstrap.floodgate.not_installed=Der Authentifizierungstyp ist Floodgate
 geyser.bootstrap.loopback.added=Loopback Ausnahme wurde zu Windows hinzugefügt\!
 geyser.bootstrap.loopback.failed=Konnte Loopback Ausnahme nicht automatisch zu Windows hinzufügen\!
 geyser.bootstrap.no_supported_protocol=Deine Server-Software unterstützt nicht die Java-Version, die Geyser benötigt ({0}). Bitte installiere ViaVersion ({1}) oder aktualisiere deine Server-Software\!
-geyser.bootstrap.unsupported_java.header=DU VERWENDEST EINE NICHT UNTERSTÜTZTE JAVA-VERSION\!
-geyser.bootstrap.unsupported_java.message=Geyser wird in Zukunft nicht mit deiner Java-Version funktionieren. Bitte aktualisiere auf Java {0}. Aktuelle Java-Version\: {1}
-geyser.bootstrap.unsupported_proxy=Dein {0} Proxy ist veraltet\!
+geyser.bootstrap.unsupported_java.header=DU VERWENDEST EINE NICHT UNTERSTÜTZTE JAVA VERSION\!
+geyser.bootstrap.unsupported_java.message=Geyser wird in Zukunft nicht mit deiner Java Version funktionieren. Bitte aktualisiere auf Java {0}. Aktuelle Java-Version\: {1}
+geyser.bootstrap.unsupported_proxy=Deine {0} Proxy ist veraltet\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=DU VERWENDEST EINE NICHT UNTERSTÜTZTE VERSION DES SPIELS\!
-geyser.bootstrap.unsupported_server.message=Geyser funktioniert mit deiner Server-Version nicht als Plugin. Verwende mindestens {0}, benutze Geyser-Standalone oder betreibe Geyser durch einen Proxy wie Velocity.
+geyser.bootstrap.unsupported_server.message=Geyser funktioniert mit deiner Server-Version nicht als Plugin. Verwende mindestens {0}, benutze Geyser-Standalone oder betreibe Geyser durch eine Proxy wie Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser unterstützt {0} nicht\!
-geyser.bootstrap.unsupported_server_type.message=Bitte aktualisieren Sie auf {0} oder einen seiner Forks, um Geyser als Plugin zu verwenden.
-geyser.bootstrap.viaversion.blocked=Du hast die Java-Version {0} in deiner ViaVersion gesperrt\! Geyser Spieler können nicht beitreten\!
+geyser.bootstrap.unsupported_server_type.message=Bitte aktualisiere auf {0} oder einen seiner Forks, um Geyser als Plugin zu verwenden.
+geyser.bootstrap.viaversion.blocked=Du hast die Java-Version {0} in deiner ViaVersion config gesperrt\! Geyser Spieler können nicht beitreten\!
 geyser.bootstrap.viaversion.too_new=Du nutzt eine neuere Version von ViaVersion; bitte aktualisiere Geyser oder melde dieses Problem auf unserem Discord Server.
 geyser.bootstrap.viaversion.too_old=Du nutzt eine veraltete Version von ViaVersion; bitte lade dir die neuste Version hier herunter\: {0}
 
@@ -62,14 +62,24 @@ geyser.chat.secure_info_1=Bedrock-Spieler können wahrscheinlich nicht chatten, 
 geyser.chat.secure_info_2=Siehe {0} für weitere Informationen und Details dazu, wie man den Chat zulässt.
 geyser.chat.too_long=Deine Nachricht ist länger als 256 Zeichen ({0}), deshalb wurde sie nicht gesendet.
 
-geyser.commands.advancedtooltips=Zeige erweiterte Tooltips (F3 + H auf Java)
+geyser.command.bedrock_only=Dieser Befehl kann nur von einem Bedrock Spieler ausgeführt werden\!
+geyser.command.invalid_argument=Ungültiges Befehlsargument\: {0}
+geyser.command.invalid_sender={0} darf diesen Befehl nicht ausführen. Muss vom Typ {1} sein
+geyser.command.invalid_syntax=Ungültige Befehlssyntax. Richtige Syntax ist\: {0}
+geyser.command.not_found=Ungültiger Befehl\! Versuche /geyser help für eine Liste von Befehlen.
+geyser.command.permission_fail=Du hast keine Berechtigung diesen Befehl auszuführen\!
+geyser.command.player_only=Dieser Befehl kann nur von einem Spieler benutzt werden\!
+geyser.command.root.extension=Der Hauptbefehl für die {0} Geyser Erweiterung
+geyser.command.root.geyser=Der Hauptbefehl für Geyser
+geyser.commands.advancedtooltips.desc=Zeige erweiterte Tooltips (F3 + H auf Java)
 geyser.commands.advancements.desc=Öffne das Java Fortschrittsmenü
+geyser.commands.connectiontest.desc=Überprüft, ob dein Server für andere Spieler erreichbar ist
 geyser.commands.dump.collecting=Sammle Fehlerinformationen
 geyser.commands.dump.collect_error=Fehler beim Sammeln von Dump Info, für mehr Information schaue in der Konsole nach
 geyser.commands.dump.collect_error_short=Fehler beim Sammeln von Dump Info
 geyser.commands.dump.created={0} hat einen GeyserDump in {1} erstellt
-geyser.commands.dump.desc=Gibt Geyser Debug Informationen für Bug Reports aus.
-geyser.commands.dump.message=Wir haben einen Dump mit nützlichen Informationen erstellt, reporte dein Problem und stelle diese URL bereit\:
+geyser.commands.dump.desc=Gibt Geyser Debug Informationen für Fehlerberichte aus.
+geyser.commands.dump.message=Wir haben einen Dump mit nützlichen Informationen erstellt, melde dein Problem und stelle diese URL bereit\:
 geyser.commands.dump.uploading=Dump wird hochgeladen
 geyser.commands.dump.upload_error=Fehler beim Uploaden vom Dump, für mehr Informationen schaue in der Konsole nach
 geyser.commands.dump.upload_error_short=Fehler beim Uploaden vom Dump
@@ -78,16 +88,18 @@ geyser.commands.dump.write_error=Fehler beim Speichern der Dump Datei, für mehr
 geyser.commands.dump.write_error_short=Fehler beim Speichern der Dump Datei
 geyser.commands.extensions.desc=Zeigt alle geladenen Erweiterungen an.
 geyser.commands.extensions.header=---- Geyser Erweiterungen (Seite {0}/{1}) ----
+geyser.commands.exthelp.desc=Listet alle Befehle dieser Erweiterung.
 geyser.commands.help.desc=Zeigt die Hilfe für alle registrierten Befehle.
 geyser.commands.help.header=---- Hilfe für\: Geyser (Seite {0}/{1}) ----
-geyser.commands.invalid=Ungültiger Befehl\! Versuche /geyser help für eine Liste von Befehlen.
 geyser.commands.list.desc=Listet alle durch Geyser verbundene Spieler auf.
 geyser.commands.list.message=&eSpieler Verbunden ({0})\: &f{1}
 geyser.commands.offhand.desc=Tauscht die Items in deinen Händen.
+geyser.commands.ping.desc=Zeigt deinen aktuellen Ping.
+geyser.commands.ping.message=Dein aktueller Ping ist {0}ms.
 geyser.commands.registered=Befehl {0} registriert
 geyser.commands.reload.desc=Lädt die Geyser Konfiguration neu, es werden alle Spieler gekickt\!
 geyser.commands.reload.kick=Geyser wurde neu geladen... Entschuldige die Unannehmlichkeiten\!
-geyser.commands.reload.message=&eLade die Geyser Konfiguration neu... Dabei werden alle Spieler die per Bedrock Client verbunden sind rausgeworfen.
+geyser.commands.reload.message=&eLade die Geyser Konfiguration neu... Dabei werden alle Bedrock Spieler rausgeworfen.
 geyser.commands.settings.desc=Öffnet ein Einstellungsmenü, um Welteinstellungen zu ändern.
 geyser.commands.statistics.desc=Öffne das Java Statistiken Menü
 geyser.commands.stop.desc=Beendet Geyser.
@@ -98,12 +110,12 @@ geyser.commands.version.outdated=Du bist {0} Versionen hinterher; lade dir hier 
 geyser.commands.version.version=Auf diesem Server läuft {0} Version {1} (Java\: {2}, Bedrock\: {3})
 geyser.commands.version.failed=Konnte nicht nach Aktualisierungen suchen
 
-geyser.config.failed=config.yml konnte nicht Gelesen/Erstellt werden\! Stelle sicher das sie aktuell und/oder lesbar und schreibbar ist\!
+geyser.config.failed=Die config.yml Datei konnte nicht gelesen/erstellt werden\! Stelle sicher das sie aktuell und/oder lesbar und schreibbar ist\!
 
+geyser.core.dev_build=Du benutzt eine Entwicklungsversion von Geyser\! Bitte melde alle Fehler auf unserem Discord Server\: {0}.
 geyser.core.fail=Konnte Geyser nicht unter {0}\:{1} starten
 geyser.core.finish.done=Fertig ({0}s)\!
 geyser.core.finish.console=Verwende /geyser help für Hilfe\!
-geyser.core.finish.gui=Befehle ausführen -> help für Hilfe\!
 geyser.core.load={0} Version {1} wird geladen
 geyser.core.movement_warn=Geyser übersetzt Bewegungen aus Bedrock nicht perfekt. Die Nutzung von Geyser auf Servern, welche ein Anti-Cheat System einsetzen, kann einen Bann zur Folge haben.
 geyser.core.shutdown.done=Geyser erfolgreich beendet.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log={0} Spieler werden gekickt
 geyser.core.shutdown.kick.message=Geyser Proxy wird beendet.
 geyser.core.shutdown=Geyser wird beendet.
 geyser.core.start=Geyser wurde unter {0}\:{1} gestartet
+geyser.core.start.ip_suppressed=Geyser auf UDP-Port {0} gestartet
 
 geyser.entity.player.failed_list=PlayerListEntry Paket wurde vor dem Erscheinen des Spielers nicht empfangen\! Spieler {0} wird ignoriert
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Fehler beim Aktivieren der Erweiterung {0}\:
 geyser.extensions.enable.success=Erweiterung {0} aktiviert
 geyser.extensions.disable.failed=Fehler beim Aktivieren der Erweiterung {0}\:
 geyser.extensions.disable.success=Erweiterung {0} deaktiviert
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Ja
 geyser.gui.exit.deny=Nein
 geyser.gui.exit.message=Bist du sicher, dass du Geyser beenden willst?
 geyser.gui.graph.loading=Lädt...
 geyser.gui.graph.usage=Speichernutzung\: {0} MB ({1}% frei)
-geyser.gui.menu.commands=Befehle
 geyser.gui.menu.file=Datei
 geyser.gui.menu.file.exit=Verlassen
 geyser.gui.menu.file.open_folder=Öffne den Geyser Ordner
@@ -166,8 +179,8 @@ geyser.may_not_work_as_intended_all_caps=GEYSER FUNKTIONIERT GEGEBENENFALLS NICH
 geyser.network.attempt_connect={0} versuchte zu verbinden\!
 geyser.network.connect=Spieler {0} verbunden
 geyser.network.disconnect=Bedrock Benutzter mit der IP {0} wurde getrennt wegen {1}
-geyser.network.disconnect.closed_by_remote_peer=Bedrock-Client getrennt
-geyser.network.disconnect.timed_out=Bedrock-Client hat die Zeit überschritten
+geyser.network.disconnect.closed_by_remote_peer=Bedrock Client getrennt
+geyser.network.disconnect.timed_out=Bedrock Client hat die Zeit überschritten
 geyser.network.downstream_error=Nachgelagerter Paketfehler\! {0}
 geyser.network.encryption.line_1=Wir konnten keine Verschlüsselung verwenden\! Alle Bedrock Verbindungen zu diesen Server werden unsicher sein\!
 geyser.network.encryption.line_2=Wenn du das ändern möchtest, schau bitte auf {0} nach
@@ -180,7 +193,7 @@ geyser.network.remote.disconnect={0} hat den Java Server unter der Adresse {1} w
 geyser.network.remote.disconnect_internal={0} hat die Verbindung zum Java-Server wegen {1} getrennt
 geyser.network.remote.authentication_type_mismatch=Der Java Edition Server, mit dem Sie sich verbinden, benötigt ein kostenpflichtiges Konto für die Java Version\!
 geyser.network.remote.floodgate_login_error=Versucht sich als Java Edition Player anzumelden\! Ist Floodgate richtig eingerichtet?
-geyser.network.remote.floodgate_login_error_standalone=Bitte stellen Sie sicher, dass Sie sich mit dem korrekten Java Edition Server verbinden. Andernfalls stellen Sie sicher, dass Floodgate als Plugin installiert ist und überprüfen Sie die Server-Logs auf eventuelle Fehler.
+geyser.network.remote.floodgate_login_error_standalone=Bitte stelle sicher, dass du dich mit dem korrekten Java Edition Server verbinden. Andernfalls stelle sicher, dass Floodgate als Plugin installiert ist und überprüfen die Server-Logs auf eventuelle Fehler.
 geyser.network.remote.floodgate_explanation_plugin=Wenn Sie sich ohne Java Edition-Account anmelden möchten, verwenden Sie bitte Floodgate\: {0}
 geyser.network.remote.floodgate_explanation_standalone=Wenn Sie sich ohne Java Edition Konto anmelden möchten und diesen Server besitzen, verwenden Sie bitte Floodgate\: {0}
 geyser.network.remote.invalid_account=Dieser Server benötigt ein bezahltes Java Edition Benutzerkonto.
@@ -192,12 +205,12 @@ geyser.network.remote.server_offline=Konnte den Java Edition Server nicht erreic
 geyser.network.translator.chunk.out_of_bounds=Der Server verwendet Chunkhöhen die größer sind, als Bedrock akzeptieren kann\! Um Probleme zu vermeiden, muss die Chunkhöhe zwischen Y{0} und Y{1} für Dimension {2} sein.
 geyser.network.translator.packet.failed=Konnte Paket {0} nicht übersetzen
 geyser.network.translator.score.failed_objective=Versuche die Top-Liste zu aktualisieren, ohne die Existenz des angefragten Objekts\: '{0}'
-geyser.network.translator.team.failed_overrides=Team {0} wird ignoriert. Es überschreibt ohne das alte Team zu entfernen.
+geyser.network.translator.team.failed_overrides=Team {0} wird ignoriert. Es überschrieben ohne das alte Team zu entfernen.
 
 geyser.resource_pack.broken=Das Ressourcenpaket {0} ist ungültig und konnte nicht geladen werden\!
 
 geyser.scoreboard.updater.threshold_reached=Wir werden die Häufigkeit mit der das Scoreboard aktualisiert wird auf {0} mal pro Sekunde verringern, um die Leistung zu erhöhen.
-geyser.scoreboard.updater.threshold_reached.log={0} hat mehr als {1} score Pakete pro Sekunde erhalten (aktuell {2}).
+geyser.scoreboard.updater.threshold_reached.log={0} hat mehr als {1} Score Pakete pro Sekunde erhalten (aktuell {2}).
 
 geyser.settings.option.customSkulls=Eigene Schädel-Skins anzeigen
 geyser.settings.title.client=Client-Einstellungen
@@ -205,9 +218,9 @@ geyser.settings.title.game_rules=Spielregeln
 geyser.settings.title.main=Einstellungen
 geyser.settings.title.server=Server-Einstellungen
 
-geyser.skin.bedrock.fail=Konnte bedrock skin für '{0}' nicht laden da es wahrscheinlich ein angepassten skin ist
-geyser.skin.bedrock.register=Registriere bedrock skin für {0} ({1})
-geyser.skin.fail=Fehler beim beziehen des Skins für {0}
+geyser.skin.bedrock.fail=Konnte Bedrock Skin für '{0}' nicht laden da es wahrscheinlich ein angepasster Skin ist
+geyser.skin.bedrock.register=Registriere Bedrock Skin für {0} ({1})
+geyser.skin.fail=Fehler beim Laden des Skins für {0}
 
 geyser.statistics.killed=Getötet
 geyser.statistics.killed_by=Getötet von
