--- a/texts/fa_IR.properties
+++ b/texts/fa_IR.properties
@@ -1,20 +1,21 @@
-geyser.advancements.earned=Earned\: {0}
+geyser.advancements.earned=دریافت شده\: {0}
 geyser.advancements.parentid=Parent advancement\: {0}
+geyser.advancements.progress=پیشرفت\: {0}
 
-geyser.auth.already_loggedin={0} is already logged in\!
+geyser.auth.already_loggedin={0} درحال حاضر وارد شده است\!
 geyser.auth.floodgate.bad_key=Error while reading Floodgate key file
 geyser.auth.floodgate.encrypt_fail=Failed to encrypt message
 geyser.auth.login.form.details.desc=Enter the credentials for your Minecraft\: Java Edition account below.
-geyser.auth.login.form.details.email=Email/Username
-geyser.auth.login.form.details.pass=Password
-geyser.auth.login.form.details.title=Login Details
-geyser.auth.login.form.disconnect=Login is required
-geyser.auth.login.form.expired=Login Expired
-geyser.auth.login.form.notice.btn_disconnect=Disconnect
-geyser.auth.login.form.notice.btn_login.microsoft=Log in with a Microsoft account
-geyser.auth.login.form.notice.btn_login.mojang=Log in with a Mojang account
-geyser.auth.login.form.notice.desc=You need a Java Edition account to play on this server.
-geyser.auth.login.form.notice.title=Login
+geyser.auth.login.form.details.email=ایمیل/نام کاربری
+geyser.auth.login.form.details.pass=گذرواژه
+geyser.auth.login.form.details.title=جزئیات ورود
+geyser.auth.login.form.disconnect=ورود الزامی است
+geyser.auth.login.form.expired=ورود منقضی شده است
+geyser.auth.login.form.notice.btn_disconnect=قطع ارتباط
+geyser.auth.login.form.notice.btn_login.microsoft=وارد شدن با یک حساب مایکروسافت
+geyser.auth.login.form.notice.btn_login.mojang=وارد شدن با اکانت موجانگ
+geyser.auth.login.form.notice.desc=شما به اکانت جاوا ادیشن برای بازی کردن در این سرور نیاز دارید.
+geyser.auth.login.form.notice.title=ورود
 geyser.auth.login.invalid.kick=Invalid/incorrect login info
 geyser.auth.login.invalid=User '{0}' entered invalid login info, kicking.
 geyser.auth.login.save_token.expired=Your Java Edition credentials have expired or are no longer active. You must re-authenticate with Microsoft, and your credentials will be re-saved.
@@ -27,29 +28,28 @@ geyser.auth.stored_credentials=Using stored credentials for bedrock user {0}
 geyser.bootstrap.args.config=Specify file for config
 geyser.bootstrap.args.config_not_specified=Please specify config file with {0} option.
 geyser.bootstrap.args.config_specified=Using config file {0}
-geyser.bootstrap.args.help=Show this help message
-geyser.bootstrap.args.gui=enable/disable gui
-geyser.bootstrap.args.options=Options\:
+geyser.bootstrap.args.help=نشان دادن پیام کمک
+geyser.bootstrap.args.gui=فعال/غیرفعال کردن gui
+geyser.bootstrap.args.options=گزینه‌ها\:
 geyser.bootstrap.args.set_config_option=Config option set from command line argument\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Unrecognised argument '{0}'
-geyser.bootstrap.args.usage=Usage\: {0}
-geyser.bootstrap.command.permission_fail=You do not have permission to execute this command\!
-geyser.bootstrap.command.bedrock_only=This command can only be executed by a Bedrock player\!
-geyser.bootstrap.command.not_found=The command you specified doesn't exist\!
+geyser.bootstrap.args.usage=استفاده\: {0}
 geyser.bootstrap.config.invalid_port=Invalid number found for Geyser remote port in config\!
 geyser.bootstrap.config.outdated=Your Geyser config is out of date\! Please regenerate your config when possible.
 geyser.bootstrap.config.too_new=Your Geyser config is too new\! Errors may occur.
 geyser.bootstrap.floodgate.auto_loaded=Auto-loaded Floodgate key
-geyser.bootstrap.floodgate.disabling=Disabling...
+geyser.bootstrap.floodgate.disabling=غیرفعال کردن...
 geyser.bootstrap.floodgate.missing_key=Auth-type set to Floodgate and the public key is missing\!
 geyser.bootstrap.floodgate.outdated=You need to update your Floodgate version for this build of Geyser, as it's no longer compatible\! Download from {0}.
 geyser.bootstrap.floodgate.not_installed=Auth-type set to Floodgate but Floodgate is not installed\!
 geyser.bootstrap.loopback.added=Added loopback exemption to Windows\!
 geyser.bootstrap.loopback.failed=Couldn't auto add loopback exemption to Windows\!
 geyser.bootstrap.no_supported_protocol=Your server software does not support the Java version that Geyser requires ({0}). Please install ViaVersion ({1}) or update your server software\!
-geyser.bootstrap.unsupported_java.header=YOU ARE RUNNING AN UNSUPPORTED VERSION OF JAVA\!
+geyser.bootstrap.unsupported_java.header=شما درحال استفاده از نسخه ساپورت نشده جاوا هستید\!
 geyser.bootstrap.unsupported_java.message=Geyser will not work on your version of Java in the future. Please update to Java {0}. Current Java version\: {1}
-geyser.bootstrap.unsupported_proxy=Your {0} proxy is outdated\!
+geyser.bootstrap.unsupported_proxy=پروکسی شما {0} قدیمی است\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=YOU ARE RUNNING AN UNSUPPORTED VERSION OF THE GAME\!
 geyser.bootstrap.unsupported_server.message=Geyser does not work on your server version as a plugin and requires that you run at least {0} on your server, or that you run Geyser standalone or through a proxy such as Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser does not support {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Bedrock players are likely unable to chat, as the serv
 geyser.chat.secure_info_2=See {0} for more information and details on how to allow chat.
 geyser.chat.too_long=Your message is bigger than 256 characters ({0}) so it has not been sent.
 
-geyser.commands.advancedtooltips=Toggle showing Advanced Tooltips (F3 + H on Java)
+geyser.command.bedrock_only=That command can only be executed by a Bedrock player\!
+geyser.command.invalid_argument=Invalid command argument\: {0}
+geyser.command.invalid_sender={0} is not allowed to execute that command. Must be of type {1}
+geyser.command.invalid_syntax=Invalid command syntax. Correct syntax is\: {0}
+geyser.command.not_found=Unknown command\! Try /geyser help for a list of commands.
+geyser.command.permission_fail=You do not have permission to execute that command\!
+geyser.command.player_only=That command can only be executed by a player\!
+geyser.command.root.extension=The main command for the {0} Geyser extension
+geyser.command.root.geyser=The main command for Geyser
+geyser.commands.advancedtooltips.desc=Toggle showing Advanced Tooltips (F3 + H on Java)
 geyser.commands.advancements.desc=Open the Java advancements menu
+geyser.commands.connectiontest.desc=آزمایش میکند که آیا سرور شما به مابقی بازیکنان قابل دسترس است یا خیر
 geyser.commands.dump.collecting=Collecting dump info
 geyser.commands.dump.collect_error=Failed to collect dump info, check console for more information
 geyser.commands.dump.collect_error_short=Failed to collect dump info
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Failed to write dump file, check console for mo
 geyser.commands.dump.write_error_short=Failed to write dump file
 geyser.commands.extensions.desc=Shows all the loaded extensions.
 geyser.commands.extensions.header=---- Geyser Extensions (Page {0}/{1}) ----
+geyser.commands.exthelp.desc=Lists all commands added by this extension.
 geyser.commands.help.desc=Shows help for all registered commands.
 geyser.commands.help.header=---- Showing Help For\: Geyser (Page {0}/{1}) ----
-geyser.commands.invalid=Invalid Command\! Try /geyser help for a list of commands.
 geyser.commands.list.desc=List all players connected through Geyser.
 geyser.commands.list.message=&eOnline Players ({0})\: &f{1}
 geyser.commands.offhand.desc=Puts an item in your offhand.
+geyser.commands.ping.desc=Shows your current ping.
+geyser.commands.ping.message=Your current ping is {0}ms.
 geyser.commands.registered=Registered command {0}
 geyser.commands.reload.desc=Reloads the Geyser configurations. Kicks all players when used\!
 geyser.commands.reload.kick=Geyser has been reloaded... sorry for the inconvenience\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Failed to check for updates
 
 geyser.config.failed=Failed to read/create config.yml\! Make sure it's up to date and/or readable+writable\!
 
+geyser.core.dev_build=You are running a development build of Geyser\! Please report any bugs you find on our Discord server\: {0}.
 geyser.core.fail=Failed to start Geyser on {0}\:{1}
 geyser.core.finish.done=Done ({0}s)\!
 geyser.core.finish.console=Run /geyser help for help\!
-geyser.core.finish.gui=Run Commands -> help for help\!
 geyser.core.load=Loading {0} version {1}
 geyser.core.movement_warn=Geyser doesn't translate Bedrock movements perfectly\! Using Geyser in servers that have an anticheat could get you banned.
 geyser.core.shutdown.done=Geyser shutdown successfully.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Kicking {0} player(s)
 geyser.core.shutdown.kick.message=Geyser Proxy shutting down.
 geyser.core.shutdown=Shutting down Geyser.
 geyser.core.start=Started Geyser on {0}\:{1}
+geyser.core.start.ip_suppressed=Started Geyser on UDP port {0}
 
 geyser.entity.player.failed_list=Haven't received PlayerListEntry packet before spawning player\! We ignore the player {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Error enabling extension {0}\:
 geyser.extensions.enable.success=Enabled extension {0}
 geyser.extensions.disable.failed=Error enabling extension {0}\:
 geyser.extensions.disable.success=Disabled extension {0}
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Yes
 geyser.gui.exit.deny=No
 geyser.gui.exit.message=Are you sure you want to exit?
 geyser.gui.graph.loading=Loading...
 geyser.gui.graph.usage=Usage\: {0}mb ({1}% free)
-geyser.gui.menu.commands=Commands
 geyser.gui.menu.file=File
 geyser.gui.menu.file.exit=Exit
 geyser.gui.menu.file.open_folder=Open Geyser folder
