--- a/texts/fi_FI.properties
+++ b/texts/fi_FI.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Ansaittu\: {0}
 geyser.advancements.parentid=Parent advancement\: {0}
+geyser.advancements.progress=Progress\: {0}
 
 geyser.auth.already_loggedin={0} on jo kirjattu sisään\!
 geyser.auth.floodgate.bad_key=Virhe luettaessa Floodgate avaintiedostoa
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Asetukset\:
 geyser.bootstrap.args.set_config_option=Config asetus asetettu komentorivirivin argumentilla\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Tunnistamaton argumentti '{0}'
 geyser.bootstrap.args.usage=Käyttö\: {0}
-geyser.bootstrap.command.permission_fail=Sinulla ei ole oikeuksia käyttää tätä komentoa\!
-geyser.bootstrap.command.bedrock_only=Vain Bedrock -pelaajat voivat suorittaa tämän komennon\!
-geyser.bootstrap.command.not_found=The command you specified doesn't exist\!
 geyser.bootstrap.config.invalid_port=Virheellinen luku Geyser etäporttiin tiedostossa config\!
 geyser.bootstrap.config.outdated=Geyser-asetuksesi on vanhentunut\! Ole hyvä ja luo asetukset uudelleen, kun mahdollista.
 geyser.bootstrap.config.too_new=Geyser-asetuksesi on liian uusi\! Virheitä voi esiintyä.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Your server software does not support the
 geyser.bootstrap.unsupported_java.header=YOU ARE RUNNING AN UNSUPPORTED VERSION OF JAVA\!
 geyser.bootstrap.unsupported_java.message=Geyser will not work on your version of Java in the future. Please update to Java {0}. Current Java version\: {1}
 geyser.bootstrap.unsupported_proxy=Your {0} proxy is outdated\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=PELAAT TUETTOMALLA VERSIOLLA PELISTÄ\!
 geyser.bootstrap.unsupported_server.message=Geyser ei toimi palvelimesi versiossa liitännäisenä ja edellyttää, että suoritat vähintään {0} palvelimellasi, tai että käytät Geyseria itsenäisesti tai välityspalvelimen kuten Velocityn kautta.
 geyser.bootstrap.unsupported_server_type.header=Geyser does not support {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Bedrock players are likely unable to chat, as the serv
 geyser.chat.secure_info_2=See {0} for more information and details on how to allow chat.
 geyser.chat.too_long=Viestisi on suurempi kuin 256 merkkiä ({0}) joten sitä ei ole lähetetty.
 
-geyser.commands.advancedtooltips=Toggle showing Advanced Tooltips (F3 + H on Java)
+geyser.command.bedrock_only=That command can only be executed by a Bedrock player\!
+geyser.command.invalid_argument=Invalid command argument\: {0}
+geyser.command.invalid_sender={0} is not allowed to execute that command. Must be of type {1}
+geyser.command.invalid_syntax=Invalid command syntax. Correct syntax is\: {0}
+geyser.command.not_found=Unknown command\! Try /geyser help for a list of commands.
+geyser.command.permission_fail=You do not have permission to execute that command\!
+geyser.command.player_only=That command can only be executed by a player\!
+geyser.command.root.extension=The main command for the {0} Geyser extension
+geyser.command.root.geyser=The main command for Geyser
+geyser.commands.advancedtooltips.desc=Toggle showing Advanced Tooltips (F3 + H on Java)
 geyser.commands.advancements.desc=Avaa Java-edistysaskel valikko
+geyser.commands.connectiontest.desc=Tests whether your server is reachable for other players
 geyser.commands.dump.collecting=Kerätään dump tietoja
 geyser.commands.dump.collect_error=Dump tietojen kerääminen epäonnistui, tarkista konsoli saadaksesi lisätietoja
 geyser.commands.dump.collect_error_short=Dump tietojen kerääminen epäonnistui
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Dumpin kirjoittaminen epäonnistui, tarkista ko
 geyser.commands.dump.write_error_short=Dump tiedostoa ei voitu kirjoittaa
 geyser.commands.extensions.desc=Shows all the loaded extensions.
 geyser.commands.extensions.header=---- Geyser Extensions (Page {0}/{1}) ----
+geyser.commands.exthelp.desc=Lists all commands added by this extension.
 geyser.commands.help.desc=Näyttää ohjeet kaikille rekisteröidyille komennoille.
 geyser.commands.help.header=---- Näytetään ohjeet\: Geyser (sivu {0}/{1}) ----
-geyser.commands.invalid=Tuntematon komento. Kirjoita /help saadaksesi listan komennoista.
 geyser.commands.list.desc=Näyttää kaikki pelaajat jotka ovat yhdistyneet Geyserin kautta.
 geyser.commands.list.message=&ePelaajat ({0})\: &f{1}
 geyser.commands.offhand.desc=Puts an item in your offhand.
+geyser.commands.ping.desc=Shows your current ping.
+geyser.commands.ping.message=Your current ping is {0}ms.
 geyser.commands.registered=Registered command {0}
 geyser.commands.reload.desc=Lataa Geyser-asetukset uudelleen. Tämä potkaisee kaikki pelaajat ulos kun tätä käytetään\!
 geyser.commands.reload.kick=Geyser on ladattu uudelleen... anteeksti haitasta\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Päivityksen tarkistaminen epäonnistui
 
 geyser.config.failed=Tiedostoa config.yml ei voitu lukea\! Varmista, että se on ajan tasalla ja/tai luettavissa ja kirjoitettavissa\!
 
+geyser.core.dev_build=You are running a development build of Geyser\! Please report any bugs you find on our Discord server\: {0}.
 geyser.core.fail=Geyserin käynnistäminen kohteessa {0}\:{1} epäonnistui
 geyser.core.finish.done=Suoritettu ({0}s)\!
 geyser.core.finish.console=Suorita /geyser tarvittaessasi apua\!
-geyser.core.finish.gui=Suorita komentoja -> apua varten\!
 geyser.core.load=Ladataan {0} versio {1}
 geyser.core.movement_warn=Geyser ei käännä Bedrock liikkeitä täydellisesti\! Käyttämällä Geyseriä palvelimilla joissa on huijauksenesto-järjestelmä voi saada sinulle porttikiellon kyseiselle palvelimelle.
 geyser.core.shutdown.done=Geyser sammutettu onnistuneesti.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Potkaistaan {0} pelaaja(a)
 geyser.core.shutdown.kick.message=Sammutetaan Geyser välityspalvelinta.
 geyser.core.shutdown=Sammutetaan Geyser.
 geyser.core.start=Geyser käynnistetty kohteessa {0}\:{1}
+geyser.core.start.ip_suppressed=Started Geyser on UDP port {0}
 
 geyser.entity.player.failed_list=PlayerListEntry pakettia ei ole vastaanotettu ennen pelaajan spawnaamista\! Sivuutetaan pelaaja {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Error enabling extension {0}\:
 geyser.extensions.enable.success=Enabled extension {0}
 geyser.extensions.disable.failed=Error enabling extension {0}\:
 geyser.extensions.disable.success=Disabled extension {0}
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Kyllä
 geyser.gui.exit.deny=Ei
 geyser.gui.exit.message=Haluatko varmasti poistua?
 geyser.gui.graph.loading=Ladataan...
 geyser.gui.graph.usage=Käyttö\: {0}mb ({1}% vapaana)
-geyser.gui.menu.commands=Komennot
 geyser.gui.menu.file=Tiedosto
 geyser.gui.menu.file.exit=Poistu
 geyser.gui.menu.file.open_folder=Avaa Geyser kansio
