--- a/texts/fr_CA.properties
+++ b/texts/fr_CA.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Obtenu\: {0}
 geyser.advancements.parentid=Avancement du parent \: {0}
+geyser.advancements.progress=Progression \: {0}
 
 geyser.auth.already_loggedin={0} est déjà connecté \!
 geyser.auth.floodgate.bad_key=Erreur de lecture du fichier de la clé Floodgate
@@ -18,8 +19,8 @@ geyser.auth.login.form.notice.title=Connexion
 geyser.auth.login.invalid.kick=Information de connexion invalide/incorrecte
 geyser.auth.login.invalid=L'utilisateur '{0}' a entré des informations de connexion invalides, expulsion.
 geyser.auth.login.save_token.expired=Vos identifiants Java Édition ont expiré ou ne sont plus actifs. Vous devez vous authentifier à nouveau avec Microsoft, et vos identifiants seront sauvegardés.
-geyser.auth.login.save_token.warning=&AVIS\:&r Les informations de votre compte Java Édition sont listées pur être enregistrées sur cette instance de Geyser. Ceci peut être utilisé par toute personne ayant accès à cette instance de Geyser pour se connecter à votre compte sans votre autorisation.
-geyser.auth.login.save_token.proceed=Procédez seulement si vous êtes le propriétaire de cette instance de Geyser, ou si vous faites confiance au propriétaire avec votre compte.
+geyser.auth.login.save_token.warning=&AVIS\:&r Les informations de votre compte Java Édition sont listées pour être enregistrées sur cette instance de Geyser. Ceci PEUT être utilisé par toute personne ayant accès à cette instance de Geyser pour se connecter à votre compte sans votre autorisation.
+geyser.auth.login.save_token.proceed=Ne procédez que si vous êtes le propriétaire de cette instance de Geyser, ou si vous faites confiance au propriétaire de cette instance avec votre compte.
 geyser.auth.login.timeout=Si vous vous déconnectez, vous aurez {0} secondes pour rejoindre pendant que vous vous connectez.
 geyser.auth.login.wait=Veuillez attendre avant d'être connecter...
 geyser.auth.stored_credentials=Utilisation des informations d'identification stockées pour l'utilisateur Bedrock {0}
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Options\:
 geyser.bootstrap.args.set_config_option=Option de configuration définie à partir de la ligne de commande\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Argument inconnu {0}
 geyser.bootstrap.args.usage=Utilisation\: {0}
-geyser.bootstrap.command.permission_fail=Tu n'as pas la permission d'exécuter cette commande \!
-geyser.bootstrap.command.bedrock_only=Ce bloc de commande peut seulement se faire exécuter par un joueur Bedrock\!
-geyser.bootstrap.command.not_found=La commande que vous avez spécifié n'existe pas \!
 geyser.bootstrap.config.invalid_port=Numéro non valide trouvé pour le port distant de Geyser dans la configuration \!
 geyser.bootstrap.config.outdated=Ta configuration de Geyser est passé date \! Essayes de la régénérer quand cela sera possible.
 geyser.bootstrap.config.too_new=Ta configuration de Geyser est trop nouvelle \! Des erreurs peuvent apparaître.
@@ -50,9 +48,11 @@ geyser.bootstrap.no_supported_protocol=Le logiciel de votre serveur ne supporte 
 geyser.bootstrap.unsupported_java.header=VOUS UTILISEZ UNE VERSION NON SUPPORTÉE DE JAVA \!
 geyser.bootstrap.unsupported_java.message=Geyser ne fonctionnera pas sur votre version de Java dans le futur. Veuillez mettre à jour vers Java {0}. Version actuelle de Java \: {1}
 geyser.bootstrap.unsupported_proxy=Votre {0} proxy n'est pas à jour \!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=VOUS AVEZ UNE VERSION NON SUPPORTÉE DU JEU \!
 geyser.bootstrap.unsupported_server.message=Geyser ne fonctionne pas sur la version de votre serveur en tant que plugin et nécessite que vous ayez au moins {0} sur votre serveur, ou que vous exécutez Geyser autonome ou via un proxy tel que Velocity.
-geyser.bootstrap.unsupported_server_type.header={0} n'est pas supporté par Geyser \!
+geyser.bootstrap.unsupported_server_type.header={0} n'est pas pris en charge par Geyser \!
 geyser.bootstrap.unsupported_server_type.message=Veuillez mettre à jour votre serveur en utilisant {0} ou une de ses bifurcations pour utiliser Geyser en tant que plugin.
 geyser.bootstrap.viaversion.blocked=La version Java {0} est bloquée dans votre configuration ViaVersion\! Les joueurs Geyser ne pourront pas rejoindre\!
 geyser.bootstrap.viaversion.too_new=Vous utilisez une version plus récente de ViaVersion; veuillez mettre à jour Geyser ou le signaler sur notre Discord.
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Les joueurs utilisant Bedrock ne sont probablement pas
 geyser.chat.secure_info_2=Voir {0} pour plus d'informations et de détails sur la façon d'autoriser le chat.
 geyser.chat.too_long=Votre message fait plus de 256 caractères ({0}) il n'a donc pas été envoyé.
 
-geyser.commands.advancedtooltips=Afficher/Masquer les infobulles avancées (F3 + H sur Java)
+geyser.command.bedrock_only=Cette commande ne peut être exécutée seulement par un joueur Bedrock \!
+geyser.command.invalid_argument=Argument de commande invalide \: {0}
+geyser.command.invalid_sender={0} n'est pas autorisé(e) à exécuter cette commande. Elle doit être de type {1}
+geyser.command.invalid_syntax=Syntaxe de commande invalide. La syntaxe correcte est \: {0}
+geyser.command.not_found=Commande inconnue \! Essayez /geyser help pour une liste de commandes.
+geyser.command.permission_fail=Vous n'avez pas la permission d'exécuter cette commande \!
+geyser.command.player_only=Cette commande peut seulement être exécutée par un joueur \!
+geyser.command.root.extension=La commande principale pour l'extension Geyser {0}
+geyser.command.root.geyser=La commande principale pour Geyser
+geyser.commands.advancedtooltips.desc=Afficher/Masquer les info-bulles avancées (F3 + H sur Java)
 geyser.commands.advancements.desc=Ouvrir le menu des progrès Java
+geyser.commands.connectiontest.desc=Teste si votre serveur est joignable par d'autres joueurs
 geyser.commands.dump.collecting=Collecte des informations de vidage
 geyser.commands.dump.collect_error=Échec de la collecte des informations de vidage, consultez la console pour plus d'informations
 geyser.commands.dump.collect_error_short=Échec de la collecte des informations de vidage
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Échec de l'écriture des informations de vidag
 geyser.commands.dump.write_error_short=Échec de l'écriture du fichier de vidage
 geyser.commands.extensions.desc=Affiche toutes les extensions qui sont chargés.
 geyser.commands.extensions.header=--- Extensions Geyser (Page {0}/{1}) ---
+geyser.commands.exthelp.desc=Liste toutes les commandes ajoutées par cette extension.
 geyser.commands.help.desc=Affiche l'aide pour toutes les commandes enregistrées.
 geyser.commands.help.header=---- Affiche l'aide pour \: Geyser (Page {0}/{1}) ----
-geyser.commands.invalid=Commande invalide \! Essayez /geyser help pour la liste des commandes.
 geyser.commands.list.desc=Liste tous les joueurs connectés via Geyser.
 geyser.commands.list.message=&eJoueurs en ligne ({0}) \: &f{1}
 geyser.commands.offhand.desc=Dépose un objet dans votre main secondaire.
+geyser.commands.ping.desc=Affiche votre ping actuel.
+geyser.commands.ping.message=Votre ping actuel est de {0}ms.
 geyser.commands.registered=Commande {0} enregistrée
 geyser.commands.reload.desc=Recharge les configurations de Geyser. Expulse tous les joueurs quand cette commande est utilisée \!
 geyser.commands.reload.kick=Geyser a été rechargé... désolé pour le dérangement \!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Échec de la vérification des mises à jour
 
 geyser.config.failed=Échec de la lecture/écriture de config.yml \! Assurez-vous qu'il est à jour et/ou lisible+inscriptible \!
 
+geyser.core.dev_build=Vous utilisez une version de développement de Geyser \! Veuillez signaler tout bogue que vous trouvez sur notre serveur Discord \: {0}.
 geyser.core.fail=Échec du démarrage de Geyser sur {0}\:{1}
 geyser.core.finish.done=Terminé ({0}s) \!
 geyser.core.finish.console=Exécuter /geyser help pour de l'aide \!
-geyser.core.finish.gui=Exécutez des commandes -> help pour de l'aide \!
 geyser.core.load=Chargement {0} version {1}
 geyser.core.movement_warn=Geyser ne traduit pas parfaitement les mouvements de Bedrock \! Utiliser Geyser sur des serveurs qui ont un anti-triche pourrait vous faire bannir.
 geyser.core.shutdown.done=L'arrêt de Geyser a réussi.
@@ -112,26 +124,27 @@ geyser.core.shutdown.kick.log=Expulse {0} joueurs(s)
 geyser.core.shutdown.kick.message=Le proxy Geyser s'arrête.
 geyser.core.shutdown=Arrêter Geyser.
 geyser.core.start=Geyser démarré sur {0}\:{1}
+geyser.core.start.ip_suppressed=Geyser a démarré sur le port UDP {0}
 
 geyser.entity.player.failed_list=N'a pas reçu le paquet PlayerListEntry avant l'apparition du joueur \! Nous ignorons le joueur {0}
 
 geyser.extensions.load.loading=Chargement des extensions...
-geyser.extensions.load.done={0} extensions chargé(s)
-geyser.extensions.load.failed_with_name=Impossible de charger {0} dans le fichier {1}\:
-geyser.extensions.load.failed_api_format=Impossible de charger {0} \: Mauvais format de version API, ça devrait être 'versionMajeure.version.Mineure.patch', version actuelle \: {1}
+geyser.extensions.load.done={0} extension(s) chargé(s)
+geyser.extensions.load.failed_with_name=Impossible de charger {0} dans le fichier {1} \:
+geyser.extensions.load.failed_api_format=Impossible de charger {0} \: Mauvais format de version API, ça devrait être 'versionMajeure.versionMineure.patch', version actuelle \: {1}
 geyser.extensions.load.failed_api_version=Impossible de charger l'extension {0} \: Mauvaise version API, version actuelle \: {1}
-geyser.extensions.load.duplicate=Doublon d'extension trouvée {0}, {1} ignoré
+geyser.extensions.load.duplicate=Doublon d'extension trouvée {0}, {1} est ignoré
 geyser.extensions.enable.failed=Une erreur est survenue lors de l'activation de l'extension {0} \:
 geyser.extensions.enable.success=Extension {0} activée
 geyser.extensions.disable.failed=Une erreur est survenue lors de l'activation de l'extension {0} \:
 geyser.extensions.disable.success=Extension {0} désactivée
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Oui
 geyser.gui.exit.deny=Non
 geyser.gui.exit.message=Êtes-vous sûr de vouloir quitter ?
 geyser.gui.graph.loading=Chargement...
 geyser.gui.graph.usage=Utilisation\: {0}mo ({1}% libre)
-geyser.gui.menu.commands=Commandes
 geyser.gui.menu.file=Fichier
 geyser.gui.menu.file.exit=Sortir
 geyser.gui.menu.file.open_folder=Ouvrir le dossier de Geyser
@@ -186,8 +199,8 @@ geyser.network.remote.floodgate_explanation_standalone=Si vous voulez vous conne
 geyser.network.remote.invalid_account=Ce serveur requiert un compte Java payé.
 geyser.network.remote.invalid_xbox_account=Veuillez vous connecter à Xbox pour rejoindre ce serveur.
 geyser.network.remote.original_disconnect_message=Message de déconnexion original \: {0}
-geyser.network.remote.outdated.proxy=Ce logiciel proxy ne supporte pas Java Edition {0}, et doit être mis à jour pour que Geyser puisse se connecter.
-geyser.network.remote.outdated.server=Ce serveur ne supporte pas Java Edition {0}, ce qui est requis pour que Geyser puisse se connecter.\nCe serveur doit être mis à jour, ou doit avoir le plugin ViaVersion installé.
+geyser.network.remote.outdated.proxy=Ce logiciel proxy ne prend pas en charge Java Edition {0}, et doit être mis à jour pour que Geyser puisse s'y connecter.
+geyser.network.remote.outdated.server=Ce serveur ne prend pas en charge Java Edition {0}, ce qui est requis pour que Geyser puisse se connecter.\nCe serveur doit être mis à jour, ou doit avoir le plugin ViaVersion installé.
 geyser.network.remote.server_offline=Impossible d'accéder au serveur Java Edition \! Il n'est soit pas en cours d'exécution ou n'accepte pas les connexions.
 geyser.network.translator.chunk.out_of_bounds=Le serveur utilise des hauteurs de tronçon plus grandes que Bedrock peut accepter \! Pour éviter les problèmes, la hauteur doit rester entre Y{0} et Y{1} pour la dimension {2}.
 geyser.network.translator.packet.failed=Impossible de traduire le paquet {0}
@@ -214,4 +227,4 @@ geyser.statistics.killed_by=Tué par
 geyser.statistics.none=Aucune statistiques pour cette section
 
 geyser.version.new=Une nouvelle mise à jour est disponible pour Geyser pour prendre en charge la version Bedrock {0}. Téléchargez-la ici \: {1}
-geyser.version.new.on_disconnect=&aThe latest Geyser release supports this Bedrock version. A server admin can download the update at &9{0}
+geyser.version.new.on_disconnect=&aLa dernière version de Geyser prend en charge cette version de Bedrock. Un administrateur peut télécharger la mise à jour à &9{0}
