--- a/texts/he_IL.properties
+++ b/texts/he_IL.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=הרווח\: {0}
 geyser.advancements.parentid=הורה מתקדם\: {0}
+geyser.advancements.progress=Progress\: {0}
 
 geyser.auth.already_loggedin={0} כבר מחובר\!
 geyser.auth.floodgate.bad_key=שגיאה בקריאה קובץ מפתח Floodgate
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=אפשרויות\:
 geyser.bootstrap.args.set_config_option=קְבּוֹעַ את האופציה מcommand line argument\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=מה זה '{0}'
 geyser.bootstrap.args.usage=נוֹהָג\: {0}
-geyser.bootstrap.command.permission_fail=אין לך רשות לעשות את זה\!
-geyser.bootstrap.command.bedrock_only=אתה יכול להפעיל את הפקודה הזו רק עם Bedrock\!
-geyser.bootstrap.command.not_found=The command you specified doesn't exist\!
 geyser.bootstrap.config.invalid_port=המספר שנמצא עבור יציאת Geyser מרחוק בתצורה אינו חוקי\!
 geyser.bootstrap.config.outdated=הקובץ Geyser config. yml זקן\! בבקשה לברא config חדש.
 geyser.bootstrap.config.too_new=הקובץ Geyser config. yml יותר מדי חדש\! אולי יהיה שגיות.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Your server software does not support the
 geyser.bootstrap.unsupported_java.header=YOU ARE RUNNING AN UNSUPPORTED VERSION OF JAVA\!
 geyser.bootstrap.unsupported_java.message=Geyser will not work on your version of Java in the future. Please update to Java {0}. Current Java version\: {1}
 geyser.bootstrap.unsupported_proxy=Your {0} proxy is outdated\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=YOU ARE RUNNING AN UNSUPPORTED VERSION OF THE GAME\!
 geyser.bootstrap.unsupported_server.message=Geyser does not work on your server version as a plugin and requires that you run at least {0} on your server, or that you run Geyser standalone or through a proxy such as Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser does not support {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Bedrock players are likely unable to chat, as the serv
 geyser.chat.secure_info_2=See {0} for more information and details on how to allow chat.
 geyser.chat.too_long="ההודעה שלך גדולה יותר מ-256 תווים ({0}) ולכן היא לא נשלחה".
 
-geyser.commands.advancedtooltips=Toggle showing Advanced Tooltips (F3 + H on Java)
+geyser.command.bedrock_only=That command can only be executed by a Bedrock player\!
+geyser.command.invalid_argument=Invalid command argument\: {0}
+geyser.command.invalid_sender={0} is not allowed to execute that command. Must be of type {1}
+geyser.command.invalid_syntax=Invalid command syntax. Correct syntax is\: {0}
+geyser.command.not_found=Unknown command\! Try /geyser help for a list of commands.
+geyser.command.permission_fail=You do not have permission to execute that command\!
+geyser.command.player_only=That command can only be executed by a player\!
+geyser.command.root.extension=The main command for the {0} Geyser extension
+geyser.command.root.geyser=The main command for Geyser
+geyser.commands.advancedtooltips.desc=Toggle showing Advanced Tooltips (F3 + H on Java)
 geyser.commands.advancements.desc=Open the Java advancements menu
+geyser.commands.connectiontest.desc=Tests whether your server is reachable for other players
 geyser.commands.dump.collecting=אוסף מידע dump
 geyser.commands.dump.collect_error=לא יכול לאסוף מידע לdump, תראה בconsole לעוד מידע.
 geyser.commands.dump.collect_error_short=לא יכול לאסוף מידע לdump
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=לא יכול לכתוב את הdump, תראה 
 geyser.commands.dump.write_error_short=לא יכול לכתוב את הdump
 geyser.commands.extensions.desc=Shows all the loaded extensions.
 geyser.commands.extensions.header=---- Geyser Extensions (Page {0}/{1}) ----
+geyser.commands.exthelp.desc=Lists all commands added by this extension.
 geyser.commands.help.desc=מראה עזרה לכל הcommands של Geyser
 geyser.commands.help.header=----מראים עזרה לGeyser (דף {1}/{0}) ----
-geyser.commands.invalid=אין command הזה\! עשות geyser help/ לכל הcommands.
 geyser.commands.list.desc=מראה כל אנשים מְחוּבָּר עם Geyser
 geyser.commands.list.message=&eאנשים מחוברים ({0})\: &f{1}
 geyser.commands.offhand.desc=שמים דבר ביד שני.
+geyser.commands.ping.desc=Shows your current ping.
+geyser.commands.ping.message=Your current ping is {0}ms.
 geyser.commands.registered=Registered command {0}
 geyser.commands.reload.desc=טוען מחדש את הGeyser config. בעוט את כל האנשים\!
 geyser.commands.reload.kick=טוען מחדש את Geyser... סליחה\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=לא יכול לבדוק לעדכונים
 
 geyser.config.failed=Failed to read/create config.yml\! Make sure it's up to date and/or readable+writable\!
 
+geyser.core.dev_build=You are running a development build of Geyser\! Please report any bugs you find on our Discord server\: {0}.
 geyser.core.fail=Failed to start Geyser on {0}\:{1}
 geyser.core.finish.done=בוצע ({0} שניות)\!
 geyser.core.finish.console=השתמש ב geyser help/ לעזרה\!
-geyser.core.finish.gui=השתמש ב Commands -> help לעזרה\!
 geyser.core.load=Loading {0} version {1}
 geyser.core.movement_warn=Geyser doesn't translate Bedrock movements perfectly\! Using Geyser in servers that have an anticheat could get you banned.
 geyser.core.shutdown.done=Geyser shutdown successfully.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Kicking {0} player(s)
 geyser.core.shutdown.kick.message=Geyser Proxy shutting down.
 geyser.core.shutdown=Shutting down Geyser.
 geyser.core.start=Started Geyser on {0}\:{1}
+geyser.core.start.ip_suppressed=Started Geyser on UDP port {0}
 
 geyser.entity.player.failed_list=Haven't received PlayerListEntry packet before spawning player\! We ignore the player {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Error enabling extension {0}\:
 geyser.extensions.enable.success=Enabled extension {0}
 geyser.extensions.disable.failed=Error enabling extension {0}\:
 geyser.extensions.disable.success=Disabled extension {0}
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=כן
 geyser.gui.exit.deny=לא
 geyser.gui.exit.message=Are you sure you want to exit?
 geyser.gui.graph.loading=טעינה...
 geyser.gui.graph.usage=Usage\: {0}mb ({1}% free)
-geyser.gui.menu.commands=פקודות
 geyser.gui.menu.file=קוֹבֶץ
 geyser.gui.menu.file.exit=יְצִיאָה
 geyser.gui.menu.file.open_folder=Open Geyser folder
