--- a/texts/it_IT.properties
+++ b/texts/it_IT.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Compiuto\: {0}
 geyser.advancements.parentid=Progresso precedente\: {0}
+geyser.advancements.progress=Progresso\: {0}
 
 geyser.auth.already_loggedin={0} è già connesso\!
 geyser.auth.floodgate.bad_key=Impossibile leggere il file della chiave di Floodgate
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Opzioni\:
 geyser.bootstrap.args.set_config_option=Opzione impostasta dalla linea di comando\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Argomento non riconosciuto\: '{0}'
 geyser.bootstrap.args.usage=Utilizzo\: {0}
-geyser.bootstrap.command.permission_fail=Non hai il permesso per eseguire questo comando\!
-geyser.bootstrap.command.bedrock_only=Questo comando può essere usato solo da un giocatore Bedrock\!
-geyser.bootstrap.command.not_found=Il comando che hai specificato non esiste\!
 geyser.bootstrap.config.invalid_port=Numero non valido trovato per la porta remota di Geyser nella configurazione\!
 geyser.bootstrap.config.outdated=La tua configurazione di Geyser non è aggiornata\! Ricreala non appena possibile.
 geyser.bootstrap.config.too_new=La tua configurazione di Geyser è troppo nuova\! Si potrebbero verificare degli errori.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Il software del tuo server non supporta l
 geyser.bootstrap.unsupported_java.header=STAI USANDO UNA VERSIONE NON SUPPORTATA DI JAVA\!
 geyser.bootstrap.unsupported_java.message=Geyser non funzionerà su questa versione di Java in futuro. Si prega di aggiornare a Java {0}. Versione corrente di Java\: {1}
 geyser.bootstrap.unsupported_proxy=Il tuo proxy {0} è obsoleto\!
+geyser.bootstrap.unsupported_proxy_backend=Questo server sembra essere in esecuzione dietro un proxy {0}\! Rimuovere il plugin Geyser da questo server e installarlo solo sul tuo proxy.
+geyser.bootstrap.setup_guide=Visita la guida d'installazione per avere aiuto nella configurazione di Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=STAI USANDO UNA VERSION NON SUPPORTATA DEL GIOCO\!
 geyser.bootstrap.unsupported_server.message=Geyser non funziona su questa versione del server come plugin e richiede l'utililizzo della {0} sul server, o della versione standalone o tramite un proxy come Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser non supporta {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=I giocatori Bedrock probabilmente non sono in grado di
 geyser.chat.secure_info_2=Vedi {0} per ulteriori informazioni e dettagli su come consentire la chat.
 geyser.chat.too_long=Il tuo messaggio è più lungo di 256 caratteri ({0}) quindi non è stato inviato.
 
-geyser.commands.advancedtooltips=Mostra/nascondi tooltip avanzati (F3 + H su Java)
+geyser.command.bedrock_only=Questo comando può essere usato solo da un giocatore Bedrock\!
+geyser.command.invalid_argument=Argomento del comando non valido\: {0}
+geyser.command.invalid_sender={0} non è autorizzato ad eseguire quel comando. Deve essere di tipo {1}
+geyser.command.invalid_syntax=Sintassi del comando non valida. La sintassi corretta è\: {0}
+geyser.command.not_found=Comando sconosciuto\! Digita /geyser help per una lista dei comandi.
+geyser.command.permission_fail=Non hai il permesso per eseguire questo comando\!
+geyser.command.player_only=Questo comando può essere eseguito solo da un giocatore\!
+geyser.command.root.extension=Il comando principale per l'estensione Geyser {0}
+geyser.command.root.geyser=Il comando principale di Geyser
+geyser.commands.advancedtooltips.desc=Mostra/nascondi tooltip avanzati (F3 + H su Java)
 geyser.commands.advancements.desc=Apri il menu dei progressi Java
+geyser.commands.connectiontest.desc=Verifica se il tuo server è raggiungibile dagli altri giocatori
 geyser.commands.dump.collecting=Raccolta di informazioni sul dump
 geyser.commands.dump.collect_error=Impossibile raccogliere informazioni sul dump, controlla la console per maggiori informazioni
 geyser.commands.dump.collect_error_short=Impossibile raccogliere informazioni sul dump
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Impossibile scrivere il file di dump, controlla
 geyser.commands.dump.write_error_short=Impossibile scrivere il file di dump
 geyser.commands.extensions.desc=Mostra tutte le estensioni caricate.
 geyser.commands.extensions.header=---- Estensioni di Geyser (pagina {0}/{1}) ----
+geyser.commands.exthelp.desc=Elenca tutti i comandi aggiunti da questa estensione.
 geyser.commands.help.desc=Mostra tutti i comandi registratri e il loro utilizzo.
 geyser.commands.help.header=--- Mostrando Comandi Di\: Geyser (Pagina {0}/{1}) ---
-geyser.commands.invalid=Comando non valido\! Digita /geyser help per una lista dei comandi.
 geyser.commands.list.desc=Mostra tutti i giocatori connessi con Geyser.
 geyser.commands.list.message=&eGiocatori Online ({0})\: &f{1}
 geyser.commands.offhand.desc=Mette un oggetto nella tua mano secondaria.
+geyser.commands.ping.desc=Mostra il tuo ping attuale.
+geyser.commands.ping.message=Il tuo ping attuale è {0}ms.
 geyser.commands.registered=Comando registrato {0}
 geyser.commands.reload.desc=Ricarica le configurazioni di Geyser. Espelle tutti i giocatori quando usato\!
 geyser.commands.reload.kick=Geyser è stato ricaricato... ci scusiamo per il disagio\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Impossibile controllare gli aggiornamenti
 
 geyser.config.failed=Impossibile leggere/creare config.yml\! Assicurati che sia aggiornato e/o leggibile+scrivibile\!
 
+geyser.core.dev_build=Stai eseguendo una build di sviluppo di Geyser\! Si prega di segnalare eventuali bug che trovi sul nostro server Discord\: {0}.
 geyser.core.fail=Impossibile avviare Geyser su {0}\:{1}
 geyser.core.finish.done=Fatto ({0}s)\!
 geyser.core.finish.console=Digita /geyser help per comandi\!
-geyser.core.finish.gui=Esegui Comandi -> help per aiuti\!
 geyser.core.load=Avvio di {0} versione {1}
 geyser.core.movement_warn=Geyser non traduce i movimenti Bedrock correttamente\! Usare Geyser in server che hanno un anticheat potrebbe farti bandire.
 geyser.core.shutdown.done=Geyser arrestato correttamente.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Espulsione di {0} giocatore/i
 geyser.core.shutdown.kick.message=Il proxy Geyser è stato arrestato.
 geyser.core.shutdown=Arresto di Geyser.
 geyser.core.start=Avviato Geyser su {0}\:{1}
+geyser.core.start.ip_suppressed=Avviato Geyser sulla porta UDP {0}
 
 geyser.entity.player.failed_list=Non è stato ricevuto il pacchetto PlayerListEntry prima che un giocatore fosse generato\! Il giocatore {0} verrà ignorato
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Errore nell'abilitare l'estensione {0}\:
 geyser.extensions.enable.success=Attivata estensione\: {0}
 geyser.extensions.disable.failed=Errore nell'abilitare l'estensione {0}\:
 geyser.extensions.disable.success=Disabilitata estensione {0}
+geyser.extensions.update.failed=Impossibile applicare il file di aggiornamento per l'estensione {0}\:
 
 geyser.gui.exit.confirm=Si
 geyser.gui.exit.deny=No
 geyser.gui.exit.message=Sei sicuro di voler uscire?
 geyser.gui.graph.loading=Caricamento...
 geyser.gui.graph.usage=Utilizzo\: {0}mb ({1}% free)
-geyser.gui.menu.commands=Comandi
 geyser.gui.menu.file=File
 geyser.gui.menu.file.exit=Esci
 geyser.gui.menu.file.open_folder=Apri cartella di Geyser
