--- a/texts/nl_NL.properties
+++ b/texts/nl_NL.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Verdient\:{0}
 geyser.advancements.parentid=Parent advancement\: {0}
+geyser.advancements.progress=Vooruitgang {0}%
 
 geyser.auth.already_loggedin={0} is al ingelogd\!
 geyser.auth.floodgate.bad_key=Er was een fout opgetreden bij het lezen van Floodgate zijn sleutelbestand
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Opties\:
 geyser.bootstrap.args.set_config_option=Configuratie optie van opdrachtregelargumenten staat op\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Onbekend argument '{0}'
 geyser.bootstrap.args.usage=Gebruik\: {0}
-geyser.bootstrap.command.permission_fail=Je hebt geen permissie om deze actie uit te voeren\!
-geyser.bootstrap.command.bedrock_only=Dit commando kan enkel door een bedrock speler uitgevoerd worden\!
-geyser.bootstrap.command.not_found=Het opgegeven commando bestaat niet\!
 geyser.bootstrap.config.invalid_port=Ongeldig nummer gevonden voor de externe Geyser poort in de configuratie\!
 geyser.bootstrap.config.outdated=Uw Geyser-configuratie is verouderd\! Genereer uw configuratie opnieuw indien mogelijk.
 geyser.bootstrap.config.too_new=Uw Geyser configuratie is te nieuw\! Er kunnen fouten optreden.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Uw server software ondersteunt niet de Ja
 geyser.bootstrap.unsupported_java.header=U GEBRUIKT EEN NIET ONDERSTEUNDE VERSIE VAN JAVA\!
 geyser.bootstrap.unsupported_java.message=Geyser zal in de toekomst niet meer werken met uw versie van Java. Gelieve te updaten naar Java {0}. Huidige Java versie\: {1}
 geyser.bootstrap.unsupported_proxy=Uw {0} proxy is verouderd\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=U GEBRUIKT EEN NIET ONDERSTEUNDE VERSIE VAN HET SPEL\!
 geyser.bootstrap.unsupported_server.message=Geyser werkt niet op uw serverversie als een plugin en vereist dat u ten minste {0} op uw server draait, dat je Geyser standalone of via een proxy zoals Velocity uitvoert.
 geyser.bootstrap.unsupported_server_type.header=Geyser ondersteunt {0} niet\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Bedrock spelers kunnen waarschijnlijk niet chatten, om
 geyser.chat.secure_info_2=Zie {0} voor meer informatie en details over hoe chat toe te staan.
 geyser.chat.too_long=Je bericht is langer dan 256 karakters ({0}) en dus niet verzonden.
 
-geyser.commands.advancedtooltips=Tonen geavanceerde tooltips (F3 + H op Java) in-/uitschakelen
+geyser.command.bedrock_only=Dit commando kan enkel door een bedrock speler uitgevoerd worden\!
+geyser.command.invalid_argument=Invalid command argument\: {0}
+geyser.command.invalid_sender={0} is niet toegestaan om dat commando uit te voeren. Moet van type {1} zijn
+geyser.command.invalid_syntax=Invalid command syntax. Correct syntax is\: {0}
+geyser.command.not_found=Unknown command\! Try /geyser help for a list of commands.
+geyser.command.permission_fail=You do not have permission to execute that command\!
+geyser.command.player_only=That command can only be executed by a player\!
+geyser.command.root.extension=The main command for the {0} Geyser extension
+geyser.command.root.geyser=The main command for Geyser
+geyser.commands.advancedtooltips.desc=Toggle showing Advanced Tooltips (F3 + H on Java)
 geyser.commands.advancements.desc=Open de java vooruitgang menu
+geyser.commands.connectiontest.desc=Tests whether your server is reachable for other players
 geyser.commands.dump.collecting=Dumpinformatie verzamelen
 geyser.commands.dump.collect_error=Mislukt om dump informatie te verzamelen, bekijk de console voor meer informatie
 geyser.commands.dump.collect_error_short=Het ophalen van de dump informatie is mislukt
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Mislukt om het rapport aan te maken, bekijk de 
 geyser.commands.dump.write_error_short=Kon het dumpbestand niet schrijven
 geyser.commands.extensions.desc=Toon alle geladen extensies.
 geyser.commands.extensions.header=--- Geyser Extensies (Pagina {0}/{1}) ---
+geyser.commands.exthelp.desc=Lists all commands added by this extension.
 geyser.commands.help.desc=Toont hulp voor alle geregistreerde commando's.
 geyser.commands.help.header=---- Toont hulp voor\: Geyser (Pagina {0}/{1}) ----
-geyser.commands.invalid=Ongeldig Commando\! Probeer /geyser help voor de lijst van commandos.
 geyser.commands.list.desc=Toont een lijst van alle spelers die verbonden zijn via Geyser.
 geyser.commands.list.message=&eOnline Spelers ({0})\: &f{1}
 geyser.commands.offhand.desc=Zet een item in je andere hand.
+geyser.commands.ping.desc=Shows your current ping.
+geyser.commands.ping.message=Your current ping is {0}ms.
 geyser.commands.registered=Commando {0} is geregistreerd
 geyser.commands.reload.desc=Herlaad de Geyser configuraties. Alle spelers worden verwijderd van de server bij gebruik\!
 geyser.commands.reload.kick=Geyser is opnieuw geladen... sorry voor het ongemak\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Kon niet controleren op updates
 
 geyser.config.failed=Er was een fout opgetreden bij het lezen/schrijven van config.yml\! Zorg ervoor dat de config actueel is en/of dat het leesbaar+schrijfbaar is\!
 
+geyser.core.dev_build=Je gebruikt een ontwikkelingsversie van Geyser\! Gelieve alle bugs die je vindt te rapporteren op onze Discord-server\: {0}.
 geyser.core.fail=Geyser kon niet succesvol opstarten op {0}\:{1}
 geyser.core.finish.done=Klaar ({0}s)\!
 geyser.core.finish.console=Voer /geyser help uit voor help\!
-geyser.core.finish.gui=Voer Commands uit -> help voor hulp\!
 geyser.core.load={0} versie {1} wordt geladen
 geyser.core.movement_warn=Geyser vertaalt Bedrock beweging niet perfect\! Als je Geyser gebruikt in servers die een anticheat bevatten, kan dit in een ban resulteren.
 geyser.core.shutdown.done=Geyser is succesvol afgesloten.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log={0} speler(s) worden eruit gegooid
 geyser.core.shutdown.kick.message=Geyser Proxy wordt afgesloten.
 geyser.core.shutdown=Geyser wordt afgesloten.
 geyser.core.start=Geyser was succesvol opgestart op {0}\:{1}
+geyser.core.start.ip_suppressed=Geyser is gestart op UDP-poort {0}
 
 geyser.entity.player.failed_list=De PlayerListEntry pakket was niet ontvangen voordat de speler werd uitgezet\! We negeren speler {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Fout bij het inschakelen van extensie {0}\:
 geyser.extensions.enable.success=Extensie {0} ingeschakeld
 geyser.extensions.disable.failed=Fout bij het inschakelen van extensie {0}\:
 geyser.extensions.disable.success=Extensie {0} uitgeschakeld
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Ja
 geyser.gui.exit.deny=Nee
 geyser.gui.exit.message=Ben je er zeker van dat je het menu wilt verlaten?
 geyser.gui.graph.loading=Laden...
 geyser.gui.graph.usage=Gebruik\: {0}mb ({1}% vrij)
-geyser.gui.menu.commands=Commando's
 geyser.gui.menu.file=Bestand
 geyser.gui.menu.file.exit=Afsluiten
 geyser.gui.menu.file.open_folder=Open Geyser map
