--- a/texts/ro_RO.properties
+++ b/texts/ro_RO.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Obținut\: {0}
 geyser.advancements.parentid=Progres părinte\: {0}
+geyser.advancements.progress=Progress\: {0}
 
 geyser.auth.already_loggedin={0} este deja conectat\!
 geyser.auth.floodgate.bad_key=Eroare la citirea fișierului cheie Floodgate
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Opțiuni\:
 geyser.bootstrap.args.set_config_option=Setare opțiuni de configurare din argumentele liniei de comandă\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Argument nerecunoscut '{0}'
 geyser.bootstrap.args.usage=Folosire\: {0}
-geyser.bootstrap.command.permission_fail=Nu ai permisiunea să execuți această comandă\!
-geyser.bootstrap.command.bedrock_only=Această comandă poate fi executată doar de jucătorii Bedrock\!
-geyser.bootstrap.command.not_found=The command you specified doesn't exist\!
 geyser.bootstrap.config.invalid_port=Invalid number found for Geyser remote port in config\!
 geyser.bootstrap.config.outdated=Configurația ta Geyser este învechită\! Te rugăm regenerează configurația când posibil.
 geyser.bootstrap.config.too_new=Configurația ta Geyser este prea nouă\! Pot apărea erori.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Your server software does not support the
 geyser.bootstrap.unsupported_java.header=YOU ARE RUNNING AN UNSUPPORTED VERSION OF JAVA\!
 geyser.bootstrap.unsupported_java.message=Geyser will not work on your version of Java in the future. Please update to Java {0}. Current Java version\: {1}
 geyser.bootstrap.unsupported_proxy=Your {0} proxy is outdated\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=YOU ARE RUNNING AN UNSUPPORTED VERSION OF THE GAME\!
 geyser.bootstrap.unsupported_server.message=Geyser does not work on your server version as a plugin and requires that you run at least {0} on your server, or that you run Geyser standalone or through a proxy such as Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser does not support {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Bedrock players are likely unable to chat, as the serv
 geyser.chat.secure_info_2=See {0} for more information and details on how to allow chat.
 geyser.chat.too_long=Mesajul tău este mai lung de 256 caractere ({0}) deci nu poate fi trimis.
 
-geyser.commands.advancedtooltips=Toggle showing Advanced Tooltips (F3 + H on Java)
+geyser.command.bedrock_only=That command can only be executed by a Bedrock player\!
+geyser.command.invalid_argument=Invalid command argument\: {0}
+geyser.command.invalid_sender={0} is not allowed to execute that command. Must be of type {1}
+geyser.command.invalid_syntax=Invalid command syntax. Correct syntax is\: {0}
+geyser.command.not_found=Unknown command\! Try /geyser help for a list of commands.
+geyser.command.permission_fail=You do not have permission to execute that command\!
+geyser.command.player_only=That command can only be executed by a player\!
+geyser.command.root.extension=The main command for the {0} Geyser extension
+geyser.command.root.geyser=The main command for Geyser
+geyser.commands.advancedtooltips.desc=Toggle showing Advanced Tooltips (F3 + H on Java)
 geyser.commands.advancements.desc=Deschide meniul progresse Java
+geyser.commands.connectiontest.desc=Tests whether your server is reachable for other players
 geyser.commands.dump.collecting=Colectare date depozitate
 geyser.commands.dump.collect_error=Colectarea de date depozitate a eșuat, verifica consola pentru mai multe informații
 geyser.commands.dump.collect_error_short=Colectarea de date depozitate a eșuat
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Scrierea depozitului ca fisier a eșuat, verifi
 geyser.commands.dump.write_error_short=Scrierea depozitului ca fisier a eșuat
 geyser.commands.extensions.desc=Shows all the loaded extensions.
 geyser.commands.extensions.header=---- Geyser Extensions (Page {0}/{1}) ----
+geyser.commands.exthelp.desc=Lists all commands added by this extension.
 geyser.commands.help.desc=Arată ajutor pentru toate comenzile înregistrate.
 geyser.commands.help.header=---- Se afișează ajutor pentru\: Geyser (Pagina {0} / {1}) ----
-geyser.commands.invalid=Comandă invalidă\! Încercați /geyser help pentru o listă de comenzi.
 geyser.commands.list.desc=Listă a tuturor jucătorilor conectați prin Geyser.
 geyser.commands.list.message=&eJucători online ({0})\: &f{1}
 geyser.commands.offhand.desc=Pune obiectul în cealaltă mână.
+geyser.commands.ping.desc=Shows your current ping.
+geyser.commands.ping.message=Your current ping is {0}ms.
 geyser.commands.registered=Comandă inregistrată {0}
 geyser.commands.reload.desc=Reîncarca configurațiile Geyser. Toti jucatori vor fi dați afarca când e folosită\!
 geyser.commands.reload.kick=Geyser a fost reîncărcat... scuze pentru inconveniențe\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Nu s-a putut verifica pentru actualizări
 
 geyser.config.failed=Nu sa putut citi/crea config.yml\! Asigurați-vă ca aveți ultima verisiune și/sau fi citit+scris\!
 
+geyser.core.dev_build=You are running a development build of Geyser\! Please report any bugs you find on our Discord server\: {0}.
 geyser.core.fail=Geyser a eșuat să pornească la {0}\:{1}
 geyser.core.finish.done=Gata ({0}s)\!
 geyser.core.finish.console=Folosește /geyser help pentru ajutor\!
-geyser.core.finish.gui=Executată comenzi -> help pentru ajutor\!
 geyser.core.load=Se încarcă {0} versiunea {1}
 geyser.core.movement_warn=Geyser nu traduce mișcarile din Bedrock perfect\! Folosirea Geyser pe servere care au un anticheat te-ar putea interzice.
 geyser.core.shutdown.done=Geyser a fost închis cu succes.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Alungăm {0} jucător(i)
 geyser.core.shutdown.kick.message=Proxy-ul Geyser se închide.
 geyser.core.shutdown=Geyser se închide.
 geyser.core.start=Am pornit Geyser la {0}\:{1}
+geyser.core.start.ip_suppressed=Started Geyser on UDP port {0}
 
 geyser.entity.player.failed_list=Nu am primit pachetul PlayerListEntry înainte să apară jucătorul\! Ignorăm jucătorul {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Error enabling extension {0}\:
 geyser.extensions.enable.success=Enabled extension {0}
 geyser.extensions.disable.failed=Error enabling extension {0}\:
 geyser.extensions.disable.success=Disabled extension {0}
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Da
 geyser.gui.exit.deny=Nu
 geyser.gui.exit.message=Ești sigur că vrei să ieși?
 geyser.gui.graph.loading=Se încarcă...
 geyser.gui.graph.usage=Utilizat\: {0}mb ({1}% liber)
-geyser.gui.menu.commands=Comenzi
 geyser.gui.menu.file=Fisier
 geyser.gui.menu.file.exit=Ieșire
 geyser.gui.menu.file.open_folder=Deschide folderul Geyser
@@ -145,69 +158,69 @@ geyser.gui.table.ip=IP
 geyser.gui.table.username=Nume de utilizator
 geyser.gui.title=Geyser Independent
 
-geyser.inventory.unusable_item.creative=The creative crafting grid is\nunavailable in Java Edition
-geyser.inventory.unusable_item.name=Unusable inventory space
-geyser.inventory.unusable_item.slot=This slot does not exist in the inventory\non Java Edition, as there is less\nrows than possible in Bedrock
+geyser.inventory.unusable_item.creative=Grila de meșteșuguri creative este\nindisponibilă în Java Edition
+geyser.inventory.unusable_item.name=Spațiu de inventar inutilizabil
+geyser.inventory.unusable_item.slot=Acest slot nu există în inventarul\npe Java Edition, deoarece există mai puține rânduri\ndecât este posibil în Bedrock
 
-geyser.language.load_failed=Unable to load Geyser locale map for {0}
+geyser.language.load_failed=Imposibil de încărcat harta locală Geyser pentru {0}
 
 geyser.locale.download.en_us=Downloading Minecraft JAR to extract required files, please wait... (this may take some time depending on the speed of your internet connection)
 geyser.locale.download.en_us.done=Minecraft JAR has been successfully downloaded and loaded\!
-geyser.locale.fail.asset_cache=Failed to load locale asset cache\: {0}
-geyser.locale.fail.en_us=Unable to download and extract en_us locale\!
-geyser.locale.fail.file=Unable to load locale\: {0} ({1})
-geyser.locale.fail.invalid=Invalid locale requested to download and load\: {0}
-geyser.locale.fail.json=Unable to load Java edition locale map for {0}
-geyser.locale.fail.latest_version=Unable to get latest Minecraft version
-geyser.locale.fail.missing=Missing MC locale file\: {0}
+geyser.locale.fail.asset_cache=Nu s-a putut încărca local active cache\: {0}
+geyser.locale.fail.en_us=Imposibil de descărcat și extras en_us local\!
+geyser.locale.fail.file=Nu se poate încărca locala\: {0} ({1})
+geyser.locale.fail.invalid=local nevalid solicitat pentru a descărca și încărca\: {0}
+geyser.locale.fail.json=Imposibil de încărcat harta locală Ediția Java pentru {0}
+geyser.locale.fail.latest_version=Imposibil de obținut ultima versiune de Minecraft
+geyser.locale.fail.missing=Lipsește fișierul local MC\: {0}
 
 geyser.may_not_work_as_intended_all_caps=GEYSER MAY NOT WORK AS INTENDED\!
 
-geyser.network.attempt_connect={0} tried to connect\!
-geyser.network.connect=Player connected with username {0}
-geyser.network.disconnect=Bedrock user with ip\: {0} has disconnected for reason {1}
+geyser.network.attempt_connect={0} a încercat să se conecteze\!
+geyser.network.connect=Player conectat cu numele de utilizator {0}
+geyser.network.disconnect=Utilizatorul Bedrock cu ip\: {0} s-a deconectat din motivul {1}
 geyser.network.disconnect.closed_by_remote_peer=Bedrock client disconnected
 geyser.network.disconnect.timed_out=Bedrock client timed out
-geyser.network.downstream_error=Downstream packet error\! {0}
+geyser.network.downstream_error=Eroare in avangarda\! {0}
 geyser.network.encryption.line_1=We were unable to initialize encryption\! All Bedrock connections to this server will be insecure\!
 geyser.network.encryption.line_2=If you wish to fix this, please see {0}
 geyser.network.outdated.client=Outdated Bedrock client\! This server supports the following Bedrock versions\: {0}
 geyser.network.outdated.server=Outdated Geyser proxy\! This server supports the following Bedrock versions\: {0}
-geyser.network.pinged={0} has pinged you\!
-geyser.network.remote.connect={0} (logged in as\: {1}) has connected to remote java server on address {2}
+geyser.network.pinged={0} te-a legat\!
+geyser.network.remote.connect={0} (conectat ca\: {1}) s-a conectat la serverul java de la adresa {2}
 geyser.network.remote.connect_internal={0} (logged in as\: {1}) has connected to the Java server
-geyser.network.remote.disconnect={0} has disconnected from remote Java server on address {1} because of {2}
+geyser.network.remote.disconnect={0} s-a deconectat de la serverul Java de pe adresa {1} din cauza {2}
 geyser.network.remote.disconnect_internal={0} has disconnected from the Java server because of {1}
 geyser.network.remote.authentication_type_mismatch=The Java Edition server you're connecting to requires a paid Java Edition account\!
 geyser.network.remote.floodgate_login_error=Tried to log in as a Java Edition player\! Is Floodgate set up correctly?
 geyser.network.remote.floodgate_login_error_standalone=Please ensure you are connecting to the correct Java Edition server. Otherwise, make sure Floodgate is installed as a plugin and check the server logs for any errors.
 geyser.network.remote.floodgate_explanation_plugin=If you wish to log in without a Java Edition account, please use Floodgate\: {0}
 geyser.network.remote.floodgate_explanation_standalone=If you wish to log in without a Java Edition account and you own this server, please use Floodgate\: {0}
-geyser.network.remote.invalid_account=This server requires a paid Java account.
-geyser.network.remote.invalid_xbox_account=Please log into Xbox to join this server.
+geyser.network.remote.invalid_account=Acest server necesită un cont Java plătit.
+geyser.network.remote.invalid_xbox_account=Te rugăm să te autentifici în Xbox pentru a te alătura acestui server.
 geyser.network.remote.original_disconnect_message=Original disconnect message\: {0}
 geyser.network.remote.outdated.proxy=This proxy software does not support Java Edition {0}, and must be updated for Geyser to connect.
 geyser.network.remote.outdated.server=This server does not support Java Edition {0}, which is required for Geyser to connect.\nThe server needs to update or have the ViaVersion plugin installed.
 geyser.network.remote.server_offline=Could not reach the Java Edition server\! It is either not running or not accepting connections.
 geyser.network.translator.chunk.out_of_bounds=The server is using chunk heights bigger than Bedrock can accept\! To avoid problems, chunk height must remain between Y{0} and Y{1} for dimension {2}.
-geyser.network.translator.packet.failed=Could not translate packet {0}
-geyser.network.translator.score.failed_objective=Tried to update score without the existence of its requested objective '{0}'
-geyser.network.translator.team.failed_overrides=Ignoring team {0}. It overrides without removing old team.
+geyser.network.translator.packet.failed=Nu s-a putut traduce pachetul {0}
+geyser.network.translator.score.failed_objective=Încercat să actualizezi scorul fără existenţa obiectivului solicitat '{0}'
+geyser.network.translator.team.failed_overrides=Se ignoră echipa {0}. Se suprascrie fără a elimina vechea echipă.
 
-geyser.resource_pack.broken=The resource pack {0} is invalid and failed to load\!
+geyser.resource_pack.broken=Pachetul de resurse {0} nu este valid și nu s-a încărcat\!
 
-geyser.scoreboard.updater.threshold_reached=We will decrease the amount that the scoreboard is updated to once every {0} seconds to improve performance.
+geyser.scoreboard.updater.threshold_reached=Vom scădea suma la care tabloul de bord este actualizat o dată la fiecare {0} secunde pentru a îmbunătăți performanța.
 geyser.scoreboard.updater.threshold_reached.log={0} received more than {1} score packets per second (currently {2}).
 
 geyser.settings.option.customSkulls=Show custom skull skins
-geyser.settings.title.client=Client Settings
-geyser.settings.title.game_rules=Game rules
-geyser.settings.title.main=Settings
-geyser.settings.title.server=Server Settings
+geyser.settings.title.client=Setări client
+geyser.settings.title.game_rules=Regulile jocului
+geyser.settings.title.main=Setări
+geyser.settings.title.server=Setări server
 
-geyser.skin.bedrock.fail=Unable to load bedrock skin for '{0}' as they are likely using a customised skin
-geyser.skin.bedrock.register=Registering bedrock skin for {0} ({1})
-geyser.skin.fail=Failed getting skin for {0}
+geyser.skin.bedrock.fail=Imposibil de încărcat skin-ul de piatră de temelie pentru '{0}' deoarece este probabil să folosească un skin personalizat
+geyser.skin.bedrock.register=Înregistrarea skinului de piatră de temelie pentru {0} ({1})
+geyser.skin.fail=Obținerea skinului pentru {0} a eșuat
 
 geyser.statistics.killed=Ucis(e)
 geyser.statistics.killed_by=Ucis de către
