--- a/texts/sk_SK.properties
+++ b/texts/sk_SK.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Získané\: {0}
 geyser.advancements.parentid=Rodičovský pokrok\: {0}
+geyser.advancements.progress=Progress\: {0}
 
 geyser.auth.already_loggedin={0} už je prihlásený\!
 geyser.auth.floodgate.bad_key=Chyba pri čítaní Floodgate kľúčového súboru
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Možnosti\:
 geyser.bootstrap.args.set_config_option=Config option set from command line argument\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Nerozpoznaný argument\: '{0}'
 geyser.bootstrap.args.usage=Použitie\: {0}
-geyser.bootstrap.command.permission_fail=Nemáte oprávnenie použiť tento príkaz\!
-geyser.bootstrap.command.bedrock_only=Tento príkaz môže použiť len Bedrock hráč\!
-geyser.bootstrap.command.not_found=Príkaz, ktorý ste zadali neexistuje\!
 geyser.bootstrap.config.invalid_port=Neplatné číslo nájdené pre Geyser remote port v konfigurácii\!
 geyser.bootstrap.config.outdated=Váš Geyser config je príliš starý\! Prosím vygenerujte si čo najskôr, znovu váš config.
 geyser.bootstrap.config.too_new=Váš Geyser config je príliš nový\! Chyby môžu sa objaviť chyby.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Váš serverový softvér nepodporuje ver
 geyser.bootstrap.unsupported_java.header=POUŽÍVATE NEPODPOROVANÚ VERZIU JAVA\!
 geyser.bootstrap.unsupported_java.message=Geyser nebude fungovať na vašej verzii Javy v budúcnosti. Prosím aktualizujte na Java {0}. Aktuálna verzia Javy\: {1}
 geyser.bootstrap.unsupported_proxy=Vaše {0} proxy je zastaralé\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=POUŽÍVATE NEPODPOROVANÚ VERZIU HRY\!
 geyser.bootstrap.unsupported_server.message=Geyser does not work on your server version as a plugin and requires that you run at least {0} on your server, or that you run Geyser standalone or through a proxy such as Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser nepodporuje\: {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Bedrock players are likely unable to chat, as the serv
 geyser.chat.secure_info_2=See {0} for more information and details on how to allow chat.
 geyser.chat.too_long=Vaša správa je dlhší ako 256 znakov ({0}) takže nebola odoslaná.
 
-geyser.commands.advancedtooltips=Toggle showing Advanced Tooltips (F3 + H on Java)
+geyser.command.bedrock_only=That command can only be executed by a Bedrock player\!
+geyser.command.invalid_argument=Invalid command argument\: {0}
+geyser.command.invalid_sender={0} is not allowed to execute that command. Must be of type {1}
+geyser.command.invalid_syntax=Invalid command syntax. Correct syntax is\: {0}
+geyser.command.not_found=Unknown command\! Try /geyser help for a list of commands.
+geyser.command.permission_fail=You do not have permission to execute that command\!
+geyser.command.player_only=That command can only be executed by a player\!
+geyser.command.root.extension=The main command for the {0} Geyser extension
+geyser.command.root.geyser=The main command for Geyser
+geyser.commands.advancedtooltips.desc=Toggle showing Advanced Tooltips (F3 + H on Java)
 geyser.commands.advancements.desc=Otvoriť ponuku Java pokrokov
+geyser.commands.connectiontest.desc=Tests whether your server is reachable for other players
 geyser.commands.dump.collecting=Zbieram informácie o dumpu
 geyser.commands.dump.collect_error=Nepodarilo sa získať informácie o dumpu, skontrolujte konzolu pre viac informácií
 geyser.commands.dump.collect_error_short=Nepodarilo sa pozbierať informácie o dumpu
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Failed to write dump file, check console for mo
 geyser.commands.dump.write_error_short=Failed to write dump file
 geyser.commands.extensions.desc=Zobrazí všetky načítané rozšírenia.
 geyser.commands.extensions.header=---- Geyser Rozšírenia (Strana {0}/{1}) ----
+geyser.commands.exthelp.desc=Lists all commands added by this extension.
 geyser.commands.help.desc=Ukáže nápovedu pre všetky zaregistrované príkazy.
 geyser.commands.help.header=---- Pomocník pre\: Geyser (Stránka {0} / {1}) ----
-geyser.commands.invalid=Chybný príkaz\! Skús / geyser help pre denník príkazov.
 geyser.commands.list.desc=List všetkých hráčov pripojených cez Geyser.
 geyser.commands.list.message=&eOnline Hráči ({0})\: &f{1}
 geyser.commands.offhand.desc=Puts an item in your offhand.
+geyser.commands.ping.desc=Shows your current ping.
+geyser.commands.ping.message=Your current ping is {0}ms.
 geyser.commands.registered=Zaregistrovaný príkaz {0}
 geyser.commands.reload.desc=Znovu načíta konfiguračný súbor Geyser. Vyhodí všetkých hráčov keď je použité\!
 geyser.commands.reload.kick=Geyser sa znovu načítal... ospravedlňujeme sa za vyrušenie\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Zlyhala kontrola aktualizácií
 
 geyser.config.failed=Zlyhalo prečítanie / vytvorenie config.yml\! Uistite sa že je aktuálna a / alebo čitateľný + zapisovateľný\!
 
+geyser.core.dev_build=You are running a development build of Geyser\! Please report any bugs you find on our Discord server\: {0}.
 geyser.core.fail=Failed to start Geyser on {0}\:{1}
 geyser.core.finish.done=Dokončené ({0}s)\!
 geyser.core.finish.console=Použi /geyser help pre pomoc\!
-geyser.core.finish.gui=Použi príkazy -> help pre pomoc\!
 geyser.core.load=Loading {0} version {1}
 geyser.core.movement_warn=Geyser doesn't translate Bedrock movements perfectly\! Using Geyser in servers that have an anticheat could get you banned.
 geyser.core.shutdown.done=Geyser shutdown successfully.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Vyhadzujem {0} hráča(ov)
 geyser.core.shutdown.kick.message=Geyser Proxy sa vypína.
 geyser.core.shutdown=Geyser sa vypína.
 geyser.core.start=Geyser spustený na {0}\:{1}
+geyser.core.start.ip_suppressed=Started Geyser on UDP port {0}
 
 geyser.entity.player.failed_list=Haven't received PlayerListEntry packet before spawning player\! We ignore the player {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Error enabling extension {0}\:
 geyser.extensions.enable.success=Rozšírenie {0} bolo povolené
 geyser.extensions.disable.failed=Chyba pri povoľovaní rozšírenia {0}\:
 geyser.extensions.disable.success=Rozšírenie {0} bolo zakázané
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Áno
 geyser.gui.exit.deny=Nie
 geyser.gui.exit.message=Si si istý, že chceš skončiť?
 geyser.gui.graph.loading=Načítavanie...
 geyser.gui.graph.usage=Použitie\: {0}mb ({1}% voľné)
-geyser.gui.menu.commands=Príkazy
 geyser.gui.menu.file=Súbor
 geyser.gui.menu.file.exit=Skončiť
 geyser.gui.menu.file.open_folder=Otvoriť Geyser priečinok
