--- a/texts/sv_SE.properties
+++ b/texts/sv_SE.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Tjänade\: {0}
 geyser.advancements.parentid=Föräldrarnas framsteg\: {0}
+geyser.advancements.progress=Progress\: {0}
 
 geyser.auth.already_loggedin={0} är redan inloggad\!
 geyser.auth.floodgate.bad_key=Ett problem uppstod när Floodgates nyckelfil lästes in
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Inställningar\:
 geyser.bootstrap.args.set_config_option=Konfigurationsalternativ från kommandoradsargument\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Känner inte igen argumentet '{0}'
 geyser.bootstrap.args.usage=Användning\: {0}
-geyser.bootstrap.command.permission_fail=Du har inte tillåtelse att använda det här kommandot\!
-geyser.bootstrap.command.bedrock_only=Detta kommando kan bara utföras av en Bedrock spelare\!
-geyser.bootstrap.command.not_found=The command you specified doesn't exist\!
 geyser.bootstrap.config.invalid_port=Ogiltigt nummer hittades för Geyser fjärrport i konfiguration\!
 geyser.bootstrap.config.outdated=Din Geyser konfiguration har gått ut ur datum\! Vänligen generera om din konfiguration när du har möjlighet.
 geyser.bootstrap.config.too_new=Din Geyser konfiguration är för ny\! Problem kan uppstå.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Din serverprogramvara stöder inte den Ja
 geyser.bootstrap.unsupported_java.header=DU KÖR EN OKAMPATIBEL VERSION AV SPELET\!
 geyser.bootstrap.unsupported_java.message=Geyser fungerar inte på din version av Java i framtiden. Vänligen uppdatera till Java {0}. Nuvarande Java version\: {1}
 geyser.bootstrap.unsupported_proxy=Your {0} proxy is outdated\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=DU KÖR EN OKAMPATIBEL VERSION AV SPELET\!
 geyser.bootstrap.unsupported_server.message=Geyser fungerar inte på din serverversion som en plugin och kräver att du kör minst {0} på din server, eller att du kör Geyser fristående eller genom en proxy som Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser does not support {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Bedrock players are likely unable to chat, as the serv
 geyser.chat.secure_info_2=See {0} for more information and details on how to allow chat.
 geyser.chat.too_long=Ditt meddelande är större än 256 symboler ({0}) så det har inte blivit skickat.
 
-geyser.commands.advancedtooltips=Växla mellan att visa avancerade verktygstips (F3 + H på Java)
+geyser.command.bedrock_only=That command can only be executed by a Bedrock player\!
+geyser.command.invalid_argument=Invalid command argument\: {0}
+geyser.command.invalid_sender={0} is not allowed to execute that command. Must be of type {1}
+geyser.command.invalid_syntax=Invalid command syntax. Correct syntax is\: {0}
+geyser.command.not_found=Unknown command\! Try /geyser help for a list of commands.
+geyser.command.permission_fail=You do not have permission to execute that command\!
+geyser.command.player_only=That command can only be executed by a player\!
+geyser.command.root.extension=The main command for the {0} Geyser extension
+geyser.command.root.geyser=The main command for Geyser
+geyser.commands.advancedtooltips.desc=Toggle showing Advanced Tooltips (F3 + H on Java)
 geyser.commands.advancements.desc=Öppna Java avancerings meny
+geyser.commands.connectiontest.desc=Tests whether your server is reachable for other players
 geyser.commands.dump.collecting=Plockar upp dumpad information
 geyser.commands.dump.collect_error=Problem med att ta emot dumpad information, kolla konsolen för mer information
 geyser.commands.dump.collect_error_short=Problem uppstod vid upptagning av dumpad information
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Problem med att ta emot dumpad information, kol
 geyser.commands.dump.write_error_short=Problem med att skriva dump filen
 geyser.commands.extensions.desc=Shows all the loaded extensions.
 geyser.commands.extensions.header=---- Geyser Extensions (Page {0}/{1}) ----
+geyser.commands.exthelp.desc=Lists all commands added by this extension.
 geyser.commands.help.desc=Visar hjälp av alla registrerade kommandon.
 geyser.commands.help.header=---- Visar hjälp för\: Geyser (Sida {0}/{1}) ----
-geyser.commands.invalid=Kommando ogiltigt\! Försök med /geyser help för en lista av kommandon.
 geyser.commands.list.desc=Visa alla spelare som är anslutna genom Geyser.
 geyser.commands.list.message=&eOnline spelare ({0})\: &f{1}
 geyser.commands.offhand.desc=Lägger ett objekt i din andra hand.
+geyser.commands.ping.desc=Shows your current ping.
+geyser.commands.ping.message=Your current ping is {0}ms.
 geyser.commands.registered=Registrerade kommandon {0}
 geyser.commands.reload.desc=Laddar om Geyser konfigurationen. Sparkar alla spelare när det används\!
 geyser.commands.reload.kick=Geyser har laddats om... Ledsen för besväret\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Misslyckades att söka efter uppdateringar
 
 geyser.config.failed=Problem med att läsa/skapa config.yml\! Se till att den är aktuell och/eller är läsbar+skrivbar\!
 
+geyser.core.dev_build=You are running a development build of Geyser\! Please report any bugs you find on our Discord server\: {0}.
 geyser.core.fail=Misslyckades att starta Geyser på {0}\:{1}
 geyser.core.finish.done=Klar ({0}s)\!
 geyser.core.finish.console=Kör /geyser help för hjälp\!
-geyser.core.finish.gui=Kör Kommandon -> help för hjälp\!
 geyser.core.load=Laddar {0} version {1}
 geyser.core.movement_warn=Geyser översätter inte Bedrock rörelser perfekt\! Genom att använda Geyser på servrar med ett antifusk system kan få dig bannad.
 geyser.core.shutdown.done=Geyser stängdes av korrekt.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Sparkar {0} spelar(e)
 geyser.core.shutdown.kick.message=Geyser Proxy stängs ner.
 geyser.core.shutdown=Avslutar Geyser.
 geyser.core.start=Startade Geyser på {0}\:{1}
+geyser.core.start.ip_suppressed=Started Geyser on UDP port {0}
 
 geyser.entity.player.failed_list=Fick inte PlayerListEntry paket innan spelaren uppstod. Vi ignorerar spelaren {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Error enabling extension {0}\:
 geyser.extensions.enable.success=Enabled extension {0}
 geyser.extensions.disable.failed=Error enabling extension {0}\:
 geyser.extensions.disable.success=Disabled extension {0}
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Ja
 geyser.gui.exit.deny=Nej
 geyser.gui.exit.message=Är du säker på att du vill lämna?
 geyser.gui.graph.loading=Laddar...
 geyser.gui.graph.usage=Användning\: {0}mb ({1}% fritt)
-geyser.gui.menu.commands=Kommandon
 geyser.gui.menu.file=Fil
 geyser.gui.menu.file.exit=Avsluta
 geyser.gui.menu.file.open_folder=Öppna Geyser mappen
