--- a/texts/tr_TR.properties
+++ b/texts/tr_TR.properties
@@ -1,19 +1,20 @@
-geyser.advancements.earned=Kazanılan\: {0}
+geyser.advancements.earned=Kazanıldı\: {0}
 geyser.advancements.parentid=Üst Başarım\: {0}
+geyser.advancements.progress=İlerleme\: {0}
 
 geyser.auth.already_loggedin={0} zaten giriş yaptı\!
 geyser.auth.floodgate.bad_key=Floodgate anahtar dosyasını okurken bir hata oluştu
 geyser.auth.floodgate.encrypt_fail=Mesaj şifrelenemedi
 geyser.auth.login.form.details.desc=Minecraft\: Java Edition bilgilerinizi aşağıya giriniz.
-geyser.auth.login.form.details.email=Email/Kullanıcı Adı
+geyser.auth.login.form.details.email=E-Posta/Kullanıcı Adı
 geyser.auth.login.form.details.pass=Şifre
-geyser.auth.login.form.details.title=Giriş Detayları
+geyser.auth.login.form.details.title=Giriş Bilgileri
 geyser.auth.login.form.disconnect=Giriş yapmak zorunludur
 geyser.auth.login.form.expired=Giriş zaman aşımı
 geyser.auth.login.form.notice.btn_disconnect=Bağlantıyı kes
 geyser.auth.login.form.notice.btn_login.microsoft=Bir Microsoft hesabıyla oturum açın
 geyser.auth.login.form.notice.btn_login.mojang=Bir Mojang hesabıyla giriş yapın
-geyser.auth.login.form.notice.desc=Bu sunucuda oynayabilmek için Java Edition hesabına ihtiyacın var.
+geyser.auth.login.form.notice.desc=Bu sunucuda oynayabilmek için bir Java Edition hesabına ihtiyacın var.
 geyser.auth.login.form.notice.title=Giriş yap
 geyser.auth.login.invalid.kick=Geçersiz/yanlış giriş bilgisi
 geyser.auth.login.invalid=Kullanıcı '{0}' geçersiz giriş bilgisi girdi, atılıyor.
@@ -26,44 +27,53 @@ geyser.auth.stored_credentials=Bedrock kullanıcısı {0} için depolanan kimlik
 
 geyser.bootstrap.args.config=Yapılandırma için dosya belirt
 geyser.bootstrap.args.config_not_specified=Lütfen yapılandırma dosyasını {0} seçeneğiyle belirtin.
-geyser.bootstrap.args.config_specified={0} yapılandırma dosyasını kullanma
+geyser.bootstrap.args.config_specified={0} yapılandırma dosyası kullanılıyor
 geyser.bootstrap.args.help=Bu yardım mesajını göster
-geyser.bootstrap.args.gui=etkinleştir/devre dışı bırak gui
+geyser.bootstrap.args.gui=arayüzü etkinleştir/devre dışı bırak
 geyser.bootstrap.args.options=Seçenekler\:
-geyser.bootstrap.args.set_config_option=Komut satırı bağımsız değişkeninden ayarlanan yapılandırma seçeneği\: {0} \= {1}
+geyser.bootstrap.args.set_config_option=Komut satırı argümanıyla yapılandırma seçeneği belirlendi\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Tanınmayan argüman '{0}'
 geyser.bootstrap.args.usage=Kullanım\: {0}
-geyser.bootstrap.command.permission_fail=Bu komutu çalıştırma izniniz yok\!
-geyser.bootstrap.command.bedrock_only=Bu komut sadece bir Bedrock oyuncusu tarafından yürütülebilir\!
-geyser.bootstrap.command.not_found=Belirttiğiniz komut mevcut değil\!
-geyser.bootstrap.config.invalid_port=Configde Geyser uzak portu için geçersiz numara bulundu\!
-geyser.bootstrap.config.outdated=Geyser configiniz güncel değil\! Lütfen mümkün olduğunda configinizi yeniden oluşturun.
-geyser.bootstrap.config.too_new=Geyser configiniz çok yeni\! Hatalar meydana gelebilir.
+geyser.bootstrap.config.invalid_port=Yapılandırmada Geyser uzak bağlantı noktası için geçersiz numara bulundu\!
+geyser.bootstrap.config.outdated=Geyser yapılandırmanız güncel değil\! Lütfen mümkün olduğunda yapılandırmanızı yeniden oluşturun.
+geyser.bootstrap.config.too_new=Geyser yapılandırmanız çok yeni\! Hatalar meydana gelebilir.
 geyser.bootstrap.floodgate.auto_loaded=Floodgate anahtarı otomatik olarak yüklendi
 geyser.bootstrap.floodgate.disabling=Devre dışı bırakılıyor...
 geyser.bootstrap.floodgate.missing_key=Kimlik doğrulama türü 'Floodgate' olarak ayarlandı ve herkese açık anahtar eksik\!
-geyser.bootstrap.floodgate.outdated=Geyser'ın bu versiyonu artık uyumlu olmadığı için için Floodgate'inizi güncellemeniz gerekiyor. Buradan indirin\: {0}.
-geyser.bootstrap.floodgate.not_installed=Kimlik doğrulama türü 'Floodgate' olarak ayarlandı ama Floodgate kurulmadı\!
+geyser.bootstrap.floodgate.outdated=Geyser'ın bu versiyonu artık uyumlu olmadığı için için Floodgate sürümünüzü güncellemeniz gerekiyor. Buradan indirin\: {0}.
+geyser.bootstrap.floodgate.not_installed=Kimlik doğrulama türü 'Floodgate' olarak ayarlandı ancak Floodgate kurulu değil\!
 geyser.bootstrap.loopback.added=Windows'a geri döngü muafiyeti eklendi\!
 geyser.bootstrap.loopback.failed=Windows'a geri döngü muafiyeti otomatik olarak eklenemedi\!
-geyser.bootstrap.no_supported_protocol=Sunucu yazılımın Geyser'ın gerektirdiği Java versiyonunu ({0}) desteklemiyor. Lütfen ViaVersion'ı yükle ({1}) ya da sunucu yazılımını güncelle\!
+geyser.bootstrap.no_supported_protocol=Sunucu yazılımın Geyser'ın gerektirdiği Java versiyonunu\: ({0}) desteklemiyor. Lütfen ViaVersion'ı yükle ({1}) veya sunucu yazılımını güncelle\!
 geyser.bootstrap.unsupported_java.header=JAVANIN DESTEKLENMEYEN BİR VERSİYONUNU KULLANIYORSUNUZ\!
 geyser.bootstrap.unsupported_java.message=Geyser gelecekte şu anda kullandığınız Java versiyonunda çalışmayacak. Lütfen Java {0}'a geçin. Şu anki Java versiyonu\: {1}
 geyser.bootstrap.unsupported_proxy={0} proxy'niz eski\!
-geyser.bootstrap.unsupported_server.header=OYUNUN DESTEKLENMEYEN BİR VERSİYONUNU ÇALIŞIYORSUNUZ\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
+geyser.bootstrap.unsupported_server.header=OYUNUN DESTEKLENMEYEN BİR VERSİYONUNU KULLANIYORSUNUZ\!
 geyser.bootstrap.unsupported_server.message=Geyser, sunucu sürümünüzde eklenti olarak çalışmaz ve sunucunuzda en az {0} çalıştırmanızı veya Geyser'i bağımsız olarak veya Velocity gibi bir proxy aracılığıyla çalıştırmanızı gerektirir.
 geyser.bootstrap.unsupported_server_type.header=Geyser {0} desteklemiyor\!
-geyser.bootstrap.unsupported_server_type.message=Geyser'ı eklenti olarak kullanmak için lütfen {0} veya çatallarından birine güncelleyin.
+geyser.bootstrap.unsupported_server_type.message=Geyser'ı bir eklenti olarak kullanabilmek için lütfen {0} veya onun çatallarından birini güncelleyin.
 geyser.bootstrap.viaversion.blocked=ViaVersion yapılandırmanızda Java sürümü {0} engelli\! Geyser oyuncuları katılamayacak\!
-geyser.bootstrap.viaversion.too_new=ViaVersion'ın yeni sürümünü kullanıyorsunuz; lütfen Geyser'i güncelleyin veya bunu Discord'umuza bildirin.
+geyser.bootstrap.viaversion.too_new=ViaVersion'ın yeni bir sürümünü kullanıyorsunuz; lütfen Geyser'i güncelleyin veya bunu Discord'umuza bildirin.
 geyser.bootstrap.viaversion.too_old=ViaVersion'ın eski sürümünü kullanıyorsunuz; lütfen yeni sürümü {0}'ten indirin
 
-geyser.chat.secure_info_1=Sunucu ayarlarında zorunlu-güvenli-profili etkinleştirdiğinden, Bedrock oyuncuları muhtemelen sohbet edemez.
+geyser.chat.secure_info_1=Sunucu ayarlarında enforce-secure-profile etkinleştirdiğinden, Bedrock oyuncuları muhtemelen sohbet edemez.
 geyser.chat.secure_info_2=Daha fazla bilgi ve sohbete nasıl izin verileceğiyle ilgili ayrıntılar için {0} konusuna bakın.
 geyser.chat.too_long=Mesajınız 256 karakterden ({0}) büyük olduğu için gönderilemedi.
 
-geyser.commands.advancedtooltips=Gelişmiş araç ipuçlarını göstermeyi aç/kapat (Java'da F3 + H)
+geyser.command.bedrock_only=Bu komut yalnızca bir Bedrock oyuncusu tarafından yürütülebilir\!
+geyser.command.invalid_argument=Geçersiz komut bağımsız değişkeni\: {0}
+geyser.command.invalid_sender={0}'ın bu komutu yürütmesine izin verilmiyor. {1} türünde olmalıdır
+geyser.command.invalid_syntax=Geçersiz komut sözdizimi. Doğru sözdizimi şöyledir\: {0}
+geyser.command.not_found=Bilinmeyen komut\! Komutların listesi için /geyser help'i deneyin.
+geyser.command.permission_fail=Bu komutu yürütme izniniz yok\!
+geyser.command.player_only=Bu komut yalnızca bir oyuncu tarafından yürütülebilir\!
+geyser.command.root.extension={0} Geyser uzantısının ana komutu
+geyser.command.root.geyser=Geyser için ana komut
+geyser.commands.advancedtooltips.desc=Gelişmiş araç ipuçlarını göstermeyi aç/kapat (Java'da F3 + H)
 geyser.commands.advancements.desc=Java başarımlar menüsünü aç
+geyser.commands.connectiontest.desc=Sunucunuzun diğer oyuncular için erişilir olup olmadığı kontrol eder
 geyser.commands.dump.collecting=Döküm bilgisi toplanıyor
 geyser.commands.dump.collect_error=Döküm bilgisi toplanamadı, daha fazla bilgi için konsolu kontrol edin
 geyser.commands.dump.collect_error_short=Döküm bilgisi toplanamadı
@@ -76,14 +86,16 @@ geyser.commands.dump.upload_error_short=Döküm yüklenemedi
 geyser.commands.dump.writing=Döküm yazılıyor
 geyser.commands.dump.write_error=Döküm dosyası yazılamadı, daha fazla bilgi için konsolu kontrol edin
 geyser.commands.dump.write_error_short=Döküm dosyası yazılamadı
-geyser.commands.extensions.desc=Yüklenen tüm uzantıları gösterir.
-geyser.commands.extensions.header=---- Geyser Uzantıları (Sayfa {0}/{1}) ----
+geyser.commands.extensions.desc=Yüklenen tüm eklentileri gösterir.
+geyser.commands.extensions.header=---- Geyser Eklentileri (Sayfa {0}/{1}) ----
+geyser.commands.exthelp.desc=Bu uzantı tarafından eklenen tüm komutları listeler.
 geyser.commands.help.desc=Kayıtlı tüm komutlar için yardımı gösterir.
 geyser.commands.help.header=---- Yardım Gösteriliyor\: Geyser (Sayfa {0}/{1}) ----
-geyser.commands.invalid=Geçersiz komut\! Komutların listesi için /geyser help'i deneyin.
 geyser.commands.list.desc=Geyser aracılığıyla bağlanan tüm oyuncuları listele.
-geyser.commands.list.message=Çevrim içi Oyuncular ({0})\: {1}
+geyser.commands.list.message=&eÇevrimiçi Oyuncular ({0})\: &f{1}
 geyser.commands.offhand.desc=İkincil elinize bir eşya koyar.
+geyser.commands.ping.desc=Şu anki pinginizi gösterir.
+geyser.commands.ping.message=Mevcut ping'iniz {0}ms.
 geyser.commands.registered=Kayıtlı komut {0}
 geyser.commands.reload.desc=Geyser yapılandırmasını yeniden yükler. Kullanıldığında tüm oyuncular sunucudan atılır\!
 geyser.commands.reload.kick=Geyser yeniden yüklendi... Verdiğimiz rahatsızlıktan dolayı özür dileriz\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Güncellemeler kontrol edilemedi
 
 geyser.config.failed=Config.yml okunamadı/oluşturulamadı\! Güncel olduğundan ve/veya okunabilir+yazılabilir olduğundan emin olun\!
 
+geyser.core.dev_build=Geyser'ın bir geliştirme sürümünü kullanıyorsunuz\! Bulduğunuz hataları lütfen Discord sunucumuzdan bildirin\: {0}.
 geyser.core.fail=Geyser {0}\:{1} üzerinde başlatılamadı
 geyser.core.finish.done=Bitti ({0}s)\!
 geyser.core.finish.console=Yardım için "/geyser help" yazın\!
-geyser.core.finish.gui=Komutları Çalıştır -> yardım için yardım\!
 geyser.core.load={0} sürüm {1} yükleniyor
 geyser.core.movement_warn=Geyser, Bedrock hareketlerini mükemmel şekilde çevirmez\! Hile koruması olan sunucularda Geyser kullanmak yasaklanmanıza sebep olabilir.
 geyser.core.shutdown.done=Geyser başarıyla kapatıldı.
@@ -112,12 +124,13 @@ geyser.core.shutdown.kick.log={0} oyuncu atılıyor
 geyser.core.shutdown.kick.message=Geyser Proxy kapatılıyor.
 geyser.core.shutdown=Geyser kapatılıyor.
 geyser.core.start=Geyser {0}\:{1} üzerinde başlatıldı
+geyser.core.start.ip_suppressed={0} UDP bağlantı noktasında Geyser başlatıldı
 
 geyser.entity.player.failed_list=Oyuncuyu yeniden doğurmadan önce PlayerListEntry paketi alınmadı\! Biz oyuncu {0}'ı görmezden geliyoruz
 
 geyser.extensions.load.loading=Uzantılar yükleniyor...
 geyser.extensions.load.done={0} Uzantı(lar) yüklendi
-geyser.extensions.load.failed_with_name={1} klasörüne {0} yüklenemedi\:
+geyser.extensions.load.failed_with_name={1} klasöründeki {0} yüklenemedi\:
 geyser.extensions.load.failed_api_format={0} uzantısı yüklenemedi\: Yanlış API sürüm biçimi, 'majorVersion.minorVersion.patch' olmalıdır, mevcut sürüm\: {1}
 geyser.extensions.load.failed_api_version={0} uzantısı yüklenemedi\: Yanlış API sürümü, mevcut sürüm\: {1}
 geyser.extensions.load.duplicate=Yinelenen uzantı bulundu {0}, yok sayılıyor {1}
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed={0} uzantısı etkinleştirilirken hata oluştu\
 geyser.extensions.enable.success=Etkinleştirilmiş uzantı {0}
 geyser.extensions.disable.failed={0} uzantısı etkinleştirilirken hata oluştu\:
 geyser.extensions.disable.success=Hizmet dışı uzantı {0}
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Evet
 geyser.gui.exit.deny=Hayır
 geyser.gui.exit.message=Çıkmak istediğine emin misin?
 geyser.gui.graph.loading=Yükleniyor...
 geyser.gui.graph.usage=Kullanım\: {0}mb ({1}% boşta)
-geyser.gui.menu.commands=Komutlar
 geyser.gui.menu.file=Dosya
 geyser.gui.menu.file.exit=Çıkış
 geyser.gui.menu.file.open_folder=Geyser klasörünü aç
