--- a/texts/vi_VN.properties
+++ b/texts/vi_VN.properties
@@ -1,5 +1,6 @@
 geyser.advancements.earned=Đã đạt được\: {0}
 geyser.advancements.parentid=Thành tựu gốc\: {0}
+geyser.advancements.progress=Tiến trình\: {0}
 
 geyser.auth.already_loggedin={0} đã đăng nhập\!
 geyser.auth.floodgate.bad_key=Đã có lỗi khi đang đọc tệp khóa Floodgate
@@ -33,9 +34,6 @@ geyser.bootstrap.args.options=Tùy chọn\:
 geyser.bootstrap.args.set_config_option=Lựa chọn cấu hình đặt từ thông số lệnh\: {0} \= {1}
 geyser.bootstrap.args.unrecognised=Thông số không hợp lệ\: '{0}'
 geyser.bootstrap.args.usage=Cách dùng\: {0}
-geyser.bootstrap.command.permission_fail=Bạn không có quyền để thực hiện lệnh này\!
-geyser.bootstrap.command.bedrock_only=Lệnh chỉ có thể dùng bởi người chơi trên Bedrock\!
-geyser.bootstrap.command.not_found=Mục lệnh mà bạn đã chọn ko tồn tại\!
 geyser.bootstrap.config.invalid_port=Số cổng không hợp lệ cho Geyser trong cấu hình\!
 geyser.bootstrap.config.outdated=Cấu hình Geyser của bạn đã lỗi thời\! Vui lòng tái tạo cấu hình khi nào có thể.
 geyser.bootstrap.config.too_new=Cấu hình Geyser của bạn đang quá mới\! Có thể sẽ có lỗi xảy ra.
@@ -50,6 +48,8 @@ geyser.bootstrap.no_supported_protocol=Phiên bản máy chủ của bạn hiệ
 geyser.bootstrap.unsupported_java.header=BẠN ĐANG CHẠY PHIÊN BẢN KHÔNG ĐƯỢC HỖ TRỢ CỦA JAVA\!
 geyser.bootstrap.unsupported_java.message=Geyser sẽ không hoạt động với phiên bản Java này trong tương lai. Vui lòng cập nhật lên Java {0}. Phiên bản Java hiện tại\: {1}
 geyser.bootstrap.unsupported_proxy=Proxy {0} của bạn cần được update\!
+geyser.bootstrap.unsupported_proxy_backend=This server appears to be running behind a {0} proxy\! Remove the Geyser plugin from this server and install Geyser only on your proxy.
+geyser.bootstrap.setup_guide=Please visit the setup guide for help with configuring Geyser\: {0}
 geyser.bootstrap.unsupported_server.header=BẠN ĐANG CHẠY PHIÊN BẢN KHÔNG ĐƯỢC HỖ TRỢ CỦA TRÒ CHƠI\!
 geyser.bootstrap.unsupported_server.message=Geyser sẽ không hoạt động bằng plugin với phiên bản máy chủ của bạn và cần bạn phải chạy tối thiểu {0} trên máy chủ của bạn, hoặc là bạn chạy Geyser độc lập hoặc qua một proxy như Velocity.
 geyser.bootstrap.unsupported_server_type.header=Geyser ko hỗ trợ {0}\!
@@ -62,8 +62,18 @@ geyser.chat.secure_info_1=Người chơi Bedrock có khả năng không thể tr
 geyser.chat.secure_info_2=Xem {0} để biết thêm thông tin và chi tiết về cách cho phép trò chuyện.
 geyser.chat.too_long=Tin nhắn của bạn dài hơn 256 kí tự ({0}) nên nó chưa được gửi đi.
 
-geyser.commands.advancedtooltips=Bật/tắt chú giải nâng cao (F3 + H trên Java)
+geyser.command.bedrock_only=Lệnh chỉ có thể dùng bởi người chơi Bedrock\!
+geyser.command.invalid_argument=Sai cú pháp lệnh\: {0}
+geyser.command.invalid_sender={0} không hợp lệ để dùng lệnh này. Các hợp lệ\: {1}
+geyser.command.invalid_syntax=Sai cú pháp lệnh, cú pháp đúng\: {0}
+geyser.command.not_found=Lệnh không hợp lệ. Thử /geyser help để xem danh sách các lệnh.
+geyser.command.permission_fail=Bạn không có quyền để thực hiện lệnh này\!
+geyser.command.player_only=Lệnh chỉ có thể dùng bởi người chơi\!
+geyser.command.root.extension=Lệnh chính dành cho {0} Geyser extension
+geyser.command.root.geyser=Lệnh chính của Geyser
+geyser.commands.advancedtooltips.desc=Bật/tắt chú giải nâng cao (F3 + H trên Java)
 geyser.commands.advancements.desc=Mở menu thành tựu Java
+geyser.commands.connectiontest.desc=Tests whether your server is reachable for other players
 geyser.commands.dump.collecting=Đang thu thập thông tin kết xuất
 geyser.commands.dump.collect_error=Không thể thu thập thông tin kết xuất, vui lòng kiểm tra bản hệ thống để biết thêm thông tin
 geyser.commands.dump.collect_error_short=Không thể thu thập thông tin kết xuất
@@ -78,12 +88,14 @@ geyser.commands.dump.write_error=Không thể viết tệp kết xuất, vui lò
 geyser.commands.dump.write_error_short=Không thể viết tệp kết xuất
 geyser.commands.extensions.desc=Hiển thị tất cả những phần mở rộng đã được tải.
 geyser.commands.extensions.header=---- Phần mở rộng Geyser (Trang {0}/{1}) ----
+geyser.commands.exthelp.desc=Liệt kê tất cả các lệnh được thêm vào bởi phần mở rộng này.
 geyser.commands.help.desc=Đưa ra trợ giúp cho tất cả các lệnh.
 geyser.commands.help.header=---- Trợ giúp cho\: Geyser (Trang {0}/{1}) ----
-geyser.commands.invalid=Lệnh không hợp lệ. Thử /geyser help để xem danh sách các lệnh.
 geyser.commands.list.desc=Đưa ra danh sách tất cả những người chơi kết nối qua Geyser.
 geyser.commands.list.message=&eSố người trực tuyến ({0})\: &f{1}
 geyser.commands.offhand.desc=Cho đồ vật bạn đang cầm vào bên tay còn lại.
+geyser.commands.ping.desc=Hiển thị ping hiện tại.
+geyser.commands.ping.message=Ping hiện tại {0}ms.
 geyser.commands.registered=Đã đăng ký lệnh {0}
 geyser.commands.reload.desc=Tải lại cấu hình Geyser. Sẽ khai trừ tất cả người chơi khi được sử dụng\!
 geyser.commands.reload.kick=Geyser đã được tải lại... xin lỗi vì sự bất tiện\!
@@ -100,10 +112,10 @@ geyser.commands.version.failed=Không thể kiểm tra bản cập nhật
 
 geyser.config.failed=Không thể đọc/tạo config.yml\! Vui lòng chắc chắn là nó được cập nhật và/hoặc đọc được + viết được\!
 
+geyser.core.dev_build=
 geyser.core.fail=Không thể khởi động Geyser trên {0}\:{1}
 geyser.core.finish.done=Đã xong ({0} giây)\!
 geyser.core.finish.console=Sử dụng lệnh /geyser help để nhận trợ giúp\!
-geyser.core.finish.gui=Bấm Commands -> help để nhận trợ giúp\!
 geyser.core.load=Đang tải {0} phiên bản {1}
 geyser.core.movement_warn=Geyser không dịch được sự chuyển động của người chơi Bedrock với độ chính xác tuyệt đối\! Nếu bạn dùng Geyser trong các máy chủ có anticheat thì bạn có thể bị cấm.
 geyser.core.shutdown.done=Đã tắt Geyser thành công.
@@ -112,6 +124,7 @@ geyser.core.shutdown.kick.log=Đang khai trừ {0} người chơi
 geyser.core.shutdown.kick.message=Proxy Geyser đang tắt.
 geyser.core.shutdown=Đang tắt Geyser.
 geyser.core.start=Đã khởi động Geyser tại {0}\:{1}
+geyser.core.start.ip_suppressed=Đã khởi chạy Geyser trên cổng UDP {0}
 
 geyser.entity.player.failed_list=Chưa nhận được gói dữ liệu PlayerListEntry trước khi sinh ra người chơi\! Chúng tôi sẽ bỏ qua người chơi {0}
 
@@ -125,13 +138,13 @@ geyser.extensions.enable.failed=Lỗi khi bật phần mở rộng {0}\:
 geyser.extensions.enable.success=Đã bật phần mở rộng {0}
 geyser.extensions.disable.failed=Lỗi khi bật phần mở rộng {0}\:
 geyser.extensions.disable.success=Đã tắt phần mở rộng {0}
+geyser.extensions.update.failed=Failed to apply updated file for extension {0}\:
 
 geyser.gui.exit.confirm=Có
 geyser.gui.exit.deny=Không
 geyser.gui.exit.message=Bạn có chắc chắn muốn thoát?
 geyser.gui.graph.loading=Đang tải...
 geyser.gui.graph.usage=Sử dụng\: {0} mb ({1}% trống)
-geyser.gui.menu.commands=Các lệnh
 geyser.gui.menu.file=Tệp
 geyser.gui.menu.file.exit=Thoát
 geyser.gui.menu.file.open_folder=Mở thư mục Geyser
